Verlinkung "personenbezogene Daten"

--- a/artikel/02.tex
+++ b/artikel/02.tex
@@ -6,12 +6,12 @@
 
 \begin{enumerate}
 
-  \item Diese Verordnung gilt für die ganz oder teilweise automatisierte Verarbeitung personenbezogener Daten sowie für
-   die nichtautomatisierte Verarbeitung personenbezogener Daten, die in einem Dateisystem gespeichert sind oder
-   gespeichert werden sollen.
+  \item Diese Verordnung gilt für die ganz oder teilweise automatisierte Verarbeitung \hyperref[itm:04-1]
+   {personenbezogener Daten} sowie für die nichtautomatisierte Verarbeitung \hyperref[itm:04-1]
+   {personenbezogener Daten}, die in einem Dateisystem gespeichert sind oder gespeichert werden sollen.
   \label{itm:02-1}
 
-  \item Diese Verordnung findet keine Anwendung auf die Verarbeitung personenbezogener Daten
+  \item Diese Verordnung findet keine Anwendung auf die Verarbeitung \hyperref[itm:04-1]{personenbezogener Daten}
   \label{itm:02-2}
 
   \begin{enumerate}
@@ -33,10 +33,10 @@
 
   \end{enumerate}
 
-  \item Für die Verarbeitung personenbezogener Daten durch die Organe, Einrichtungen, Ämter und Agenturen der Union gilt
-   die Verordnung (EG) Nr. 45/2001. Die Verordnung (EG) Nr. 45/2001 und sonstige Rechtsakte der Union, die diese
-   Verarbeitung personenbezogener Daten regeln, werden im Einklang mit \hyperref[ch:98]{Artikel 98} an
-   die Grundsätze und Vorschriften der vorliegenden Verordnung angepasst.
+  \item Für die Verarbeitung \hyperref[itm:04-1]{personenbezogener Daten} durch die Organe, Einrichtungen, Ämter und
+   Agenturen der Union gilt die Verordnung (EG) Nr. 45/2001. Die Verordnung (EG) Nr. 45/2001 und sonstige Rechtsakte
+   der Union, die diese Verarbeitung \hyperref[itm:04-1]{personenbezogener Daten} regeln, werden im Einklang
+   mit \hyperref[ch:98]{Artikel 98} an die Grundsätze und Vorschriften der vorliegenden Verordnung angepasst.
   \label{itm:02-3}
 
   \item Die vorliegende Verordnung lässt die Anwendung der Richtlinie 2000/31/EG und speziell die Vorschriften der
@@ -56,7 +56,7 @@
 
   \item Die \href{https://eur-lex.europa.eu/legal-content/DE/TXT/HTML/?uri=CELEX:32001R0045&qid=1659176445961&from=DE}
    {Verordnung (EG) Nr. 45/2001} in \hyperref[itm:02-3]{Absatz 3} hat den Schutz natürlicher Personen bei der
-   Verarbeitung personenbezogener Daten durch die Organe und Einrichtungen der Gemeinschaft und den freien Datenverkehr
+   Verarbeitung \hyperref[itm:04-1]{personenbezogener Daten} durch die Organe und Einrichtungen der Gemeinschaft und den freien Datenverkehr
    zum Inhalt.
 
   \item Die in \hyperref[itm:02-4]{Absatz 4} referenzierte
