--- a/artikel/03.tex
+++ b/artikel/03.tex
@@ -6,14 +6,14 @@
 
 \begin{enumerate}
 
-  \item Diese Verordnung findet Anwendung auf die Verarbeitung personenbezogener Daten, soweit diese im Rahmen der
-   Tätigkeiten einer Niederlassung eines Verantwortlichen oder eines Auftragsverarbeiters in der Union erfolgt,
-   unabhängig davon, ob die Verarbeitung in der Union stattfindet.
+  \item Diese Verordnung findet Anwendung auf die Verarbeitung \hyperref[itm:04-1]{personenbezogener Daten}, soweit
+   diese im Rahmen der Tätigkeiten einer Niederlassung eines Verantwortlichen oder eines Auftragsverarbeiters in der
+   Union erfolgt, unabhängig davon, ob die Verarbeitung in der Union stattfindet.
   \label{itm:03-1}
 
-  \item Diese Verordnung findet Anwendung auf die Verarbeitung personenbezogener Daten von betroffenen Personen, die
-   sich in der Union befinden, durch einen nicht in der Union niedergelassenen Verantwortlichen oder
-   Auftragsverarbeiter, wenn die Datenverarbeitung im Zusammenhang damit steht
+  \item Diese Verordnung findet Anwendung auf die Verarbeitung \hyperref[itm:04-1]{personenbezogener Daten} von
+   betroffenen Personen, die sich in der Union befinden, durch einen nicht in der Union niedergelassenen
+   Verantwortlichen oder Auftragsverarbeiter, wenn die Datenverarbeitung im Zusammenhang damit steht
   \label{itm:03-2}
 
   \begin{enumerate}
@@ -27,9 +27,9 @@
 
   \end{enumerate}
 
-  \item Diese Verordnung findet Anwendung auf die Verarbeitung personenbezogener Daten durch einen nicht in der Union
-   niedergelassenen Verantwortlichen an einem Ort, der aufgrund Völkerrechts dem Recht eines Mitgliedstaats
-   unterliegt.
+  \item Diese Verordnung findet Anwendung auf die Verarbeitung \hyperref[itm:04-1]{personenbezogener Daten} durch einen
+   nicht in der Union niedergelassenen Verantwortlichen an einem Ort, der aufgrund Völkerrechts dem Recht eines
+   Mitgliedstaats unterliegt.
   \label{itm:03-3}
 
 \end{enumerate}
