--- a/artikel/04.tex
+++ b/artikel/04.tex
@@ -17,84 +17,84 @@ Im Sinne dieser Verordnung bezeichnet der Ausdruck:
   \label{itm:04-1}
 
   \item „Verarbeitung“ jeden mit oder ohne Hilfe automatisierter Verfahren ausgeführten Vorgang oder jede solche
-   Vorgangsreihe im Zusammenhang mit personenbezogenen Daten wie das Erheben, das Erfassen, die Organisation, das
+   Vorgangsreihe im Zusammenhang mit \hyperref[itm:04-1]{personenbezogenen Daten} wie das Erheben, das Erfassen, die Organisation, das
    Ordnen, die Speicherung, die Anpassung oder Veränderung, das Auslesen, das Abfragen, die Verwendung, die Offenlegung
    durch Übermittlung, Verbreitung oder eine andere Form der Bereitstellung, den Abgleich oder die Verknüpfung, die
    Einschränkung, das Löschen oder die Vernichtung;
   \label{itm:04-2}
 
-  \item „Einschränkung der Verarbeitung“ die Markierung gespeicherter personenbezogener Daten mit dem Ziel, ihre
+  \item „Einschränkung der Verarbeitung“ die Markierung gespeicherter \hyperref[itm:04-1]{personenbezogener Daten} mit dem Ziel, ihre
    künftige Verarbeitung einzuschränken;
   \label{itm:04-3}
 
-  \item „Profiling“ jede Art der automatisierten Verarbeitung personenbezogener Daten, die darin besteht, dass diese
-   personenbezogenen Daten verwendet werden, um bestimmte persönliche Aspekte, die sich auf eine natürliche Person
+  \item „Profiling“ jede Art der automatisierten Verarbeitung \hyperref[itm:04-1]{personenbezogener Daten}, die darin besteht, dass diese
+   \hyperref[itm:04-1]{personenbezogenen Daten} verwendet werden, um bestimmte persönliche Aspekte, die sich auf eine natürliche Person
    beziehen, zu bewerten, insbesondere um Aspekte bezüglich Arbeitsleistung, wirtschaftliche Lage, Gesundheit,
    persönliche Vorlieben, Interessen, Zuverlässigkeit, Verhalten, Aufenthaltsort oder Ortswechsel dieser natürlichen
    Person zu analysieren oder vorherzusagen;
   \label{itm:04-4}
 
-  \item „Pseudonymisierung“ die Verarbeitung personenbezogener Daten in einer Weise, dass die personenbezogenen Daten
+  \item „Pseudonymisierung“ die Verarbeitung \hyperref[itm:04-1]{personenbezogener Daten} in einer Weise, dass die \hyperref[itm:04-1]{personenbezogenen Daten}
    ohne Hinzuziehung zusätzlicher Informationen nicht mehr einer spezifischen betroffenen Person zugeordnet werden
    können, sofern diese zusätzlichen Informationen gesondert aufbewahrt werden und technischen und organisatorischen
-   Maßnahmen unterliegen, die gewährleisten, dass die personenbezogenen Daten nicht einer identifizierten oder
+   Maßnahmen unterliegen, die gewährleisten, dass die \hyperref[itm:04-1]{personenbezogenen Daten} nicht einer identifizierten oder
    identifizierbaren natürlichen Person zugewiesen werden;
   \label{itm:04-5}
 
-  \item „Dateisystem“ jede strukturierte Sammlung personenbezogener Daten, die nach bestimmten Kriterien zugänglich
+  \item „Dateisystem“ jede strukturierte Sammlung \hyperref[itm:04-1]{personenbezogener Daten}, die nach bestimmten Kriterien zugänglich
    sind, unabhängig davon, ob diese Sammlung zentral, dezentral oder nach funktionalen oder geografischen
    Gesichtspunkten geordnet geführt wird;
   \label{itm:04-6}
 
   \item „Verantwortlicher“ die natürliche oder juristische Person, Behörde, Einrichtung oder andere Stelle, die allein
-   oder gemeinsam mit anderen über die Zwecke und Mittel der Verarbeitung von personenbezogenen Daten entscheidet; sind
+   oder gemeinsam mit anderen über die Zwecke und Mittel der Verarbeitung von \hyperref[itm:04-1]{personenbezogenen Daten} entscheidet; sind
    die Zwecke und Mittel dieser Verarbeitung durch das Unionsrecht oder das Recht der Mitgliedstaaten vorgegeben, so
    kann der Verantwortliche beziehungsweise können die bestimmten Kriterien seiner Benennung nach dem Unionsrecht oder
    dem Recht der Mitgliedstaaten vorgesehen werden;
   \label{itm:04-7}
 
   \item „Auftragsverarbeiter“ eine natürliche oder juristische Person, Behörde, Einrichtung oder andere Stelle, die
-   personenbezogene Daten im Auftrag des Verantwortlichen verarbeitet;
+   \hyperref[itm:04-1]{personenbezogene Daten} im Auftrag des Verantwortlichen verarbeitet;
   \label{itm:04-8}
 
   \item „Empfänger“ eine natürliche oder juristische Person, Behörde, Einrichtung oder andere Stelle, der
-   personenbezogene Daten offengelegt werden, unabhängig davon, ob es sich bei ihr um einen Dritten handelt oder nicht.
+   \hyperref[itm:04-1]{personenbezogene Daten} offengelegt werden, unabhängig davon, ob es sich bei ihr um einen Dritten handelt oder nicht.
    Behörden, die im Rahmen eines bestimmten Untersuchungsauftrags nach dem Unionsrecht oder dem Recht der
-   Mitgliedstaaten möglicherweise personenbezogene Daten erhalten, gelten jedoch nicht als Empfänger; die Verarbeitung
+   Mitgliedstaaten möglicherweise \hyperref[itm:04-1]{personenbezogene Daten} erhalten, gelten jedoch nicht als Empfänger; die Verarbeitung
    dieser Daten durch die genannten Behörden erfolgt im Einklang mit den geltenden Datenschutzvorschriften gemäß den
    Zwecken der Verarbeitung;
   \label{itm:04-9}
 
   \item „Dritter“ eine natürliche oder juristische Person, Behörde, Einrichtung oder andere Stelle, außer der
    betroffenen Person, dem Verantwortlichen, dem Auftragsverarbeiter und den Personen, die unter der unmittelbaren
-   Verantwortung des Verantwortlichen oder des Auftragsverarbeiters befugt sind, die personenbezogenen Daten zu
+   Verantwortung des Verantwortlichen oder des Auftragsverarbeiters befugt sind, die \hyperref[itm:04-1]{personenbezogenen Daten} zu
    verarbeiten;
   \label{itm:04-10}
 
   \item „Einwilligung“ der betroffenen Person jede freiwillig für den bestimmten Fall, in informierter Weise und
    unmissverständlich abgegebene Willensbekundung in Form einer Erklärung oder einer sonstigen eindeutigen
    bestätigenden Handlung, mit der die betroffene Person zu verstehen gibt, dass sie mit der Verarbeitung der sie
-   betreffenden personenbezogenen Daten einverstanden ist;
+   betreffenden \hyperref[itm:04-1]{personenbezogenen Daten} einverstanden ist;
   \label{itm:04-11}
 
-  \item „Verletzung des Schutzes personenbezogener Daten“ eine Verletzung der Sicherheit, die, ob unbeabsichtigt oder
+  \item „Verletzung des Schutzes \hyperref[itm:04-1]{personenbezogener Daten}“ eine Verletzung der Sicherheit, die, ob unbeabsichtigt oder
    unrechtmäßig, zur Vernichtung, zum Verlust, zur Veränderung, oder zur unbefugten Offenlegung von beziehungsweise zum
-   unbefugten Zugang zu personenbezogenen Daten führt, die übermittelt, gespeichert oder auf sonstige Weise verarbeitet
+   unbefugten Zugang zu \hyperref[itm:04-1]{personenbezogenen Daten} führt, die übermittelt, gespeichert oder auf sonstige Weise verarbeitet
    wurden;
   \label{itm:04-12}
 
-  \item „genetische Daten“ personenbezogene Daten zu den ererbten oder erworbenen genetischen Eigenschaften einer
+  \item „genetische Daten“ \hyperref[itm:04-1]{personenbezogene Daten} zu den ererbten oder erworbenen genetischen Eigenschaften einer
    natürlichen Person, die eindeutige Informationen über die Physiologie oder die Gesundheit dieser natürlichen Person
    liefern und insbesondere aus der Analyse einer biologischen Probe der betreffenden natürlichen Person gewonnen
    wurden;
   \label{itm:04-13}
 
-  \item „biometrische Daten“ mit speziellen technischen Verfahren gewonnene personenbezogene Daten zu den physischen,
+  \item „biometrische Daten“ mit speziellen technischen Verfahren gewonnene \hyperref[itm:04-1]{personenbezogene Daten} zu den physischen,
    physiologischen oder verhaltenstypischen Merkmalen einer natürlichen Person, die die eindeutige Identifizierung
    dieser natürlichen Person ermöglichen oder bestätigen, wie Gesichtsbilder oder daktyloskopische Daten;
   \label{itm:04-14}
 
-  \item „Gesundheitsdaten“ personenbezogene Daten, die sich auf die körperliche oder geistige Gesundheit einer
+  \item „Gesundheitsdaten“ \hyperref[itm:04-1]{personenbezogene Daten}, die sich auf die körperliche oder geistige Gesundheit einer
    natürlichen Person, einschließlich der Erbringung von Gesundheitsdienstleistungen, beziehen und aus denen
    Informationen über deren Gesundheitszustand hervorgehen;
   \label{itm:04-15}
@@ -106,7 +106,7 @@ Im Sinne dieser Verordnung bezeichnet der Ausdruck:
   
     \item im Falle eines Verantwortlichen mit Niederlassungen in mehr als einem Mitgliedstaat den Ort seiner
      Hauptverwaltung in der Union, es sei denn, die Entscheidungen hinsichtlich der Zwecke und Mittel der Verarbeitung
-     personenbezogener Daten werden in einer anderen Niederlassung des Verantwortlichen in der Union getroffen und
+     \hyperref[itm:04-1]{personenbezogener Daten} werden in einer anderen Niederlassung des Verantwortlichen in der Union getroffen und
      diese Niederlassung ist befugt, diese Entscheidungen umsetzen zu lassen; in diesem Fall gilt die Niederlassung,
      die derartige Entscheidungen trifft, als Hauptniederlassung;
     \label{itm:04-16a}
@@ -134,9 +134,9 @@ Im Sinne dieser Verordnung bezeichnet der Ausdruck:
    Unternehmen besteht;
   \label{itm:04-19}
 
-  \item „verbindliche interne Datenschutzvorschriften“ Maßnahmen zum Schutz personenbezogener Daten, zu deren Einhaltung
+  \item „verbindliche interne Datenschutzvorschriften“ Maßnahmen zum Schutz \hyperref[itm:04-1]{personenbezogener Daten}, zu deren Einhaltung
    sich ein im Hoheitsgebiet eines Mitgliedstaats niedergelassener Verantwortlicher oder Auftragsverarbeiter
-   verpflichtet im Hinblick auf Datenübermittlungen oder eine Kategorie von Datenübermittlungen personenbezogener Daten
+   verpflichtet im Hinblick auf Datenübermittlungen oder eine Kategorie von Datenübermittlungen \hyperref[itm:04-1]{personenbezogener Daten}
    an einen Verantwortlichen oder Auftragsverarbeiter derselben Unternehmensgruppe oder derselben Gruppe von
    Unternehmen, die eine gemeinsame Wirtschaftstätigkeit ausüben, in einem oder mehreren Drittländern;
   \label{itm:04-20}
@@ -145,7 +145,7 @@ Im Sinne dieser Verordnung bezeichnet der Ausdruck:
    staatliche Stelle;
   \label{itm:04-21}   
 
-  \item „betroffene Aufsichtsbehörde“ eine Aufsichtsbehörde, die von der Verarbeitung personenbezogener Daten betroffen
+  \item „betroffene Aufsichtsbehörde“ eine Aufsichtsbehörde, die von der Verarbeitung \hyperref[itm:04-1]{personenbezogener Daten} betroffen
    ist, weil
   \label{itm:04-22}
 
@@ -169,12 +169,12 @@ Im Sinne dieser Verordnung bezeichnet der Ausdruck:
 
   \begin{enumerate}
 
-    \item eine Verarbeitung personenbezogener Daten, die im Rahmen der Tätigkeiten von Niederlassungen eines
+    \item eine Verarbeitung \hyperref[itm:04-1]{personenbezogener Daten}, die im Rahmen der Tätigkeiten von Niederlassungen eines
      Verantwortlichen oder eines Auftragsverarbeiters in der Union in mehr als einem Mitgliedstaat erfolgt, wenn der
      Verantwortliche oder Auftragsverarbeiter in mehr als einem Mitgliedstaat niedergelassen ist, oder
     \label{itm:04-23a}
 
-    \item eine Verarbeitung personenbezogener Daten, die im Rahmen der Tätigkeiten einer einzelnen Niederlassung eines
+    \item eine Verarbeitung \hyperref[itm:04-1]{personenbezogener Daten}, die im Rahmen der Tätigkeiten einer einzelnen Niederlassung eines
      Verantwortlichen oder eines Auftragsverarbeiters in der Union erfolgt, die jedoch erhebliche Auswirkungen auf
      betroffene Personen in mehr als einem Mitgliedstaat hat oder haben kann;
     \label{itm:04-23b}
@@ -185,7 +185,7 @@ Im Sinne dieser Verordnung bezeichnet der Ausdruck:
    Verstoß gegen diese Verordnung vorliegt oder ob beabsichtigte Maßnahmen gegen den Verantwortlichen oder den
    Auftragsverarbeiter im Einklang mit dieser Verordnung steht, wobei aus diesem Einspruch die Tragweite der Risiken
    klar hervorgeht, die von dem Beschlussentwurf in Bezug auf die Grundrechte und Grundfreiheiten der betroffenen
-   Personen und gegebenenfalls den freien Verkehr personenbezogener Daten in der Union ausgehen;
+   Personen und gegebenenfalls den freien Verkehr \hyperref[itm:04-1]{personenbezogener Daten} in der Union ausgehen;
   \label{itm:04-27}
  
   \item „Dienst der Informationsgesellschaft“ eine Dienstleistung im Sinne des Artikels 1 Nummer 1 Buchstabe b der
