--- a/artikel/05.tex
+++ b/artikel/05.tex
@@ -6,7 +6,7 @@
 
 \begin{enumerate}
 
-  \item Personenbezogene Daten müssen
+  \item \hyperref[itm:04-1]{Personenbezogene Daten} müssen
   \label{itm:05-1}
 
   \begin{enumerate}
@@ -27,20 +27,20 @@
     \label{itm:05-1c}
 
     \item sachlich richtig und erforderlichenfalls auf dem neuesten Stand sein; es sind alle angemessenen Maßnahmen zu
-     treffen, damit personenbezogene Daten, die im Hinblick auf die Zwecke ihrer Verarbeitung unrichtig sind,
+     treffen, damit \hyperref[itm:04-1]{personenbezogene Daten}, die im Hinblick auf die Zwecke ihrer Verarbeitung unrichtig sind,
      unverzüglich gelöscht oder berichtigt werden („Richtigkeit“);
     \label{itm:05-1d}
 
     \item in einer Form gespeichert werden, die die Identifizierung der betroffenen Personen nur so lange ermöglicht,
-     wie es für die Zwecke, für die sie verarbeitet werden, erforderlich ist; personenbezogene Daten dürfen länger
-     gespeichert werden, soweit die personenbezogenen Daten vorbehaltlich der Durchführung geeigneter technischer und
+     wie es für die Zwecke, für die sie verarbeitet werden, erforderlich ist; \hyperref[itm:04-1]{personenbezogene Daten} dürfen länger
+     gespeichert werden, soweit die \hyperref[itm:04-1]{personenbezogenen Daten} vorbehaltlich der Durchführung geeigneter technischer und
      organisatorischer Maßnahmen, die von dieser Verordnung zum Schutz der Rechte und Freiheiten der betroffenen Person
      gefordert werden, ausschließlich für im öffentlichen Interesse liegende Archivzwecke oder für wissenschaftliche
      und historische Forschungszwecke oder für statistische Zwecke gemäß \hyperref[itm:89-1]{Artikel 89 Absatz 1}
      verarbeitet werden(„Speicherbegrenzung“);
     \label{itm:05-1e}
 
-    \item in einer Weise verarbeitet werden, die eine angemessene Sicherheit der personenbezogenen Daten gewährleistet,
+    \item in einer Weise verarbeitet werden, die eine angemessene Sicherheit der \hyperref[itm:04-1]{personenbezogenen Daten} gewährleistet,
      einschließlich Schutz vor unbefugter oder unrechtmäßiger Verarbeitung und vor unbeabsichtigtem Verlust,
      unbeabsichtigter Zerstörung oder unbeabsichtigter Schädigung durch geeignete technische und organisatorische
      Maßnahmen („Integrität und Vertraulichkeit“);
