--- a/artikel/06.tex
+++ b/artikel/06.tex
@@ -11,7 +11,7 @@
 
   \begin{enumerate}
   
-    \item Die betroffene Person hat ihre Einwilligung zu der Verarbeitung der sie betreffenden personenbezogenen Daten
+    \item Die betroffene Person hat ihre Einwilligung zu der Verarbeitung der sie betreffenden \hyperref[itm:04-1]{personenbezogenen Daten}
      für einen oder mehrere bestimmte Zwecke gegeben;
     \label{itm:06-1a}
 
@@ -33,7 +33,7 @@
 
     \item die Verarbeitung ist zur Wahrung der berechtigten Interessen des Verantwortlichen oder eines Dritten
      erforderlich, sofern nicht die Interessen oder Grundrechte und Grundfreiheiten der betroffenen Person, die den
-     Schutz personenbezogener Daten erfordern, überwiegen, insbesondere dann, wenn es sich bei der betroffenen Person
+     Schutz \hyperref[itm:04-1]{personenbezogener Daten} erfordern, überwiegen, insbesondere dann, wenn es sich bei der betroffenen Person
      um ein Kind handelt.
     \label{itm:06-1f}
 
@@ -68,33 +68,33 @@
    Rechtsgrundlage kann spezifische Bestimmungen zur Anpassung der Anwendung der Vorschriften dieser Verordnung
    enthalten, unter anderem Bestimmungen darüber, welche allgemeinen Bedingungen für die Regelung der Rechtmäßigkeit
    der Verarbeitung durch den Verantwortlichen gelten, welche Arten von Daten verarbeitet werden, welche Personen
-   betroffen sind, an welche Einrichtungen und für welche Zwecke die personenbezogenen Daten offengelegt werden dürfen,
+   betroffen sind, an welche Einrichtungen und für welche Zwecke die \hyperref[itm:04-1]{personenbezogenen Daten} offengelegt werden dürfen,
    welcher Zweckbindung sie unterliegen, wie lange sie gespeichert werden dürfen und welche Verarbeitungsvorgänge
    und -verfahren angewandt werden dürfen, einschließlich Maßnahmen zur Gewährleistung einer rechtmäßig und nach Treu
    und Glauben erfolgenden Verarbeitung, wie solche für sonstige besondere Verarbeitungssituationen gemäß \hyperref
    [part:9]{Kapitel IX}. Das Unionsrecht oder das Recht der Mitgliedstaaten müssen ein im öffentlichen Interesse
    liegendes Ziel verfolgen und in einem angemessenen Verhältnis zu dem verfolgten legitimen Zweck stehen.
 
-  \item Beruht die Verarbeitung zu einem anderen Zweck als zu demjenigen, zu dem die personenbezogenen Daten erhoben
+  \item Beruht die Verarbeitung zu einem anderen Zweck als zu demjenigen, zu dem die \hyperref[itm:04-1]{personenbezogenen Daten} erhoben
    wurden, nicht auf der Einwilligung der betroffenen Person oder auf einer Rechtsvorschrift der Union oder der
    Mitgliedstaaten, die in einer demokratischen Gesellschaft eine notwendige und verhältnismäßige Maßnahme zum Schutz
    der in \hyperref[itm:23-1]{Artikel 23 Absatz 1} genannten Ziele darstellt, so berücksichtigt der Verantwortliche --
-   um festzustellen, ob die Verarbeitung zu einem anderen Zweck mit demjenigen, zu dem die personenbezogenen Daten
+   um festzustellen, ob die Verarbeitung zu einem anderen Zweck mit demjenigen, zu dem die \hyperref[itm:04-1]{personenbezogenen Daten}
    ursprünglich erhoben wurden, vereinbar ist -- unter anderem
   \label{itm:06-4}
 
   \begin{enumerate}
   
-    \item jede Verbindung zwischen den Zwecken, für die die personenbezogenen Daten erhoben wurden, und den Zwecken der
+    \item jede Verbindung zwischen den Zwecken, für die die \hyperref[itm:04-1]{personenbezogenen Daten} erhoben wurden, und den Zwecken der
      beabsichtigten Weiterverarbeitung,
     \label{itm:06-4a}
 
-    \item den Zusammenhang, in dem die personenbezogenen Daten erhoben wurden, insbesondere hinsichtlich des
+    \item den Zusammenhang, in dem die \hyperref[itm:04-1]{personenbezogenen Daten} erhoben wurden, insbesondere hinsichtlich des
      Verhältnisses zwischen den betroffenen Personen und dem Verantwortlichen,
     \label{itm:06-4b}
 
-    \item die Art der personenbezogenen Daten, insbesondere ob besondere Kategorien personenbezogener Daten gemäß
-     \hyperref[ch:9]{Artikel 9} verarbeitet werden oder ob personenbezogene Daten über strafrechtliche Verurteilungen
+    \item die Art der \hyperref[itm:04-1]{personenbezogenen Daten}, insbesondere ob besondere Kategorien \hyperref[itm:04-1]{personenbezogener Daten} gemäß
+     \hyperref[ch:9]{Artikel 9} verarbeitet werden oder ob \hyperref[itm:04-1]{personenbezogene Daten} über strafrechtliche Verurteilungen
       und Straftaten gemäß \hyperref[ch:10]{Artikel 10} verarbeitet werden,
     \label{itm:06-4c}
 
