--- a/artikel/07.tex
+++ b/artikel/07.tex
@@ -7,7 +7,7 @@
 \begin{enumerate}
 
   \item Beruht die Verarbeitung auf einer Einwilligung, muss der Verantwortliche nachweisen können, dass die betroffene
-   Person in die Verarbeitung ihrer personenbezogenen Daten eingewilligt hat.
+   Person in die Verarbeitung ihrer \hyperref[itm:04-1]{personenbezogenen Daten} eingewilligt hat.
   \label{itm:07-1}
 
   \item Erfolgt die Einwilligung der betroffenen Person durch eine schriftliche Erklärung, die noch andere Sachverhalte
@@ -24,7 +24,7 @@
 
   \item Bei der Beurteilung, ob die Einwilligung freiwillig erteilt wurde, muss dem Umstand in größtmöglichem Umfang
    Rechnung getragen werden, ob unter anderem die Erfüllung eines Vertrags, einschließlich der Erbringung einer
-   Dienstleistung, von der Einwilligung zu einer Verarbeitung von personenbezogenen Daten abhängig ist, die für die
+   Dienstleistung, von der Einwilligung zu einer Verarbeitung von \hyperref[itm:04-1]{personenbezogenen Daten} abhängig ist, die für die
    Erfüllung des Vertrags nicht erforderlich sind.
   \label{itm:07-4}
 
