--- a/artikel/09.tex
+++ b/artikel/09.tex
@@ -6,7 +6,7 @@
 
 \begin{enumerate}
 
-  \item Die Verarbeitung personenbezogener Daten, aus denen die rassische und ethnische Herkunft, politische Meinungen,
+  \item Die Verarbeitung \hyperref[itm:04-1]{personenbezogener Daten}, aus denen die rassische und ethnische Herkunft, politische Meinungen,
    religiöse oder weltanschauliche Überzeugungen oder die Gewerkschaftszugehörigkeit hervorgehen, sowie die
    Verarbeitung von genetischen Daten, biometrischen Daten zur eindeutigen Identifizierung einer natürlichen Person,
    Gesundheitsdaten oder Daten zum Sexualleben oder der sexuellen Orientierung einer natürlichen Person ist untersagt.
@@ -17,7 +17,7 @@
 
   \begin{enumerate}
   
-    \item Die betroffene Person hat in die Verarbeitung der genannten personenbezogenen Daten für einen oder mehrere
+    \item Die betroffene Person hat in die Verarbeitung der genannten \hyperref[itm:04-1]{personenbezogenen Daten} für einen oder mehrere
      festgelegte Zwecke ausdrücklich eingewilligt, es sei denn, nach Unionsrecht oder dem Recht der Mitgliedstaaten
      kann das Verbot nach \hyperref[itm:09-1]{Absatz 1} durch die Einwilligung der betroffenen Person nicht aufgehoben
      werden,
@@ -40,10 +40,10 @@
      Gewinnerzielungsabsicht im Rahmen ihrer rechtmäßigen Tätigkeiten und unter der Voraussetzung, dass sich die
      Verarbeitung ausschließlich auf die Mitglieder oder ehemalige Mitglieder der Organisation oder auf Personen, die
      im Zusammenhang mit deren Tätigkeitszweck regelmäßige Kontakte mit ihr unterhalten, bezieht und die
-     personenbezogenen Daten nicht ohne Einwilligung der betroffenen Personen nach außen offengelegt werden,
+     \hyperref[itm:04-1]{personenbezogenen Daten} nicht ohne Einwilligung der betroffenen Personen nach außen offengelegt werden,
     \label{itm:09-2d}
 
-    \item die Verarbeitung bezieht sich auf personenbezogene Daten, die die betroffene Person offensichtlich öffentlich
+    \item die Verarbeitung bezieht sich auf \hyperref[itm:04-1]{personenbezogene Daten}, die die betroffene Person offensichtlich öffentlich
      gemacht hat,
     \label{itm:09-2e}
 
@@ -81,7 +81,7 @@
 
   \end{enumerate}
 
-  \item Die in \hyperref[itm:09-1]{Absatz 1} genannten personenbezogenen Daten dürfen zu den in \hyperref[itm:09-2h]
+  \item Die in \hyperref[itm:09-1]{Absatz 1} genannten \hyperref[itm:04-1]{personenbezogenen Daten} dürfen zu den in \hyperref[itm:09-2h]
    {Absatz 2 Buchstabe h} genannten Zwecken verarbeitet werden, wenn diese Daten von Fachpersonal oder unter dessen
    Verantwortung verarbeitet werden und dieses Fachpersonal nach dem Unionsrecht oder dem Recht eines Mitgliedstaats
    oder den Vorschriften nationaler zuständiger Stellen dem Berufsgeheimnis unterliegt, oder wenn die Verarbeitung
