--- a/artikel/13.tex
+++ b/artikel/13.tex
@@ -6,7 +6,7 @@
 
 \begin{enumerate}
 
-  \item Werden personenbezogene Daten bei der betroffenen Person erhoben, so teilt der Verantwortliche der betroffenen
+  \item Werden \hyperref[itm:04-1]{personenbezogene Daten} bei der betroffenen Person erhoben, so teilt der Verantwortliche der betroffenen
    Person zum Zeitpunkt der Erhebung dieser Daten Folgendes mit:
   \label{itm:13-1}
 
@@ -18,7 +18,7 @@
     \item gegebenenfalls die Kontaktdaten des Datenschutzbeauftragten;
     \label{itm:13-1b}
 
-    \item die Zwecke, für die die personenbezogenen Daten verarbeitet werden sollen, sowie die Rechtsgrundlage für die
+    \item die Zwecke, für die die \hyperref[itm:04-1]{personenbezogenen Daten} verarbeitet werden sollen, sowie die Rechtsgrundlage für die
      Verarbeitung;
     \label{itm:13-1c}
 
@@ -26,10 +26,10 @@
      Interessen, die von dem Verantwortlichen oder einem Dritten verfolgt werden;
     \label{itm:13-1d}
 
-    \item gegebenenfalls die Empfänger oder Kategorien von Empfängern der personenbezogenen Daten und
+    \item gegebenenfalls die Empfänger oder Kategorien von Empfängern der \hyperref[itm:04-1]{personenbezogenen Daten} und
     \label{itm:13-1e}
 
-    \item gegebenenfalls die Absicht des Verantwortlichen, die personenbezogenen Daten an ein Drittland oder eine
+    \item gegebenenfalls die Absicht des Verantwortlichen, die \hyperref[itm:04-1]{personenbezogenen Daten} an ein Drittland oder eine
      internationale Organisation zu übermitteln, sowie das Vorhandensein oder das Fehlen eines
      Angemessenheitsbeschlusses der Kommission oder im Falle von Übermittlungen gemäß \hyperref[ch:46]{Artikel 46} oder
      \hyperref[ch:47]{Artikel 47} oder \hyperref[itm:49-1-2]{Artikel 49 Absatz 1 Unterabsatz 2} einen Verweis auf die
@@ -46,7 +46,7 @@
 
   \begin{enumerate}
   
-    \item die Dauer, für die die personenbezogenen Daten gespeichert werden oder, falls dies nicht möglich ist, die
+    \item die Dauer, für die die \hyperref[itm:04-1]{personenbezogenen Daten} gespeichert werden oder, falls dies nicht möglich ist, die
      Kriterien für die Festlegung dieser Dauer;
     \label{itm:13-2a}
 
@@ -63,8 +63,8 @@
     \item das Bestehen eines Beschwerderechts bei einer Aufsichtsbehörde;
     \label{itm:13-2d}
 
-    \item ob die Bereitstellung der personenbezogenen Daten gesetzlich oder vertraglich vorgeschrieben oder für einen
-     Vertragsabschluss erforderlich ist, ob die betroffene Person verpflichtet ist, die personenbezogenen Daten
+    \item ob die Bereitstellung der \hyperref[itm:04-1]{personenbezogenen Daten} gesetzlich oder vertraglich vorgeschrieben oder für einen
+     Vertragsabschluss erforderlich ist, ob die betroffene Person verpflichtet ist, die \hyperref[itm:04-1]{personenbezogenen Daten}
      bereitzustellen, und welche mögliche Folgen die Nichtbereitstellung hätte und
     \label{itm:13-2e}
 
@@ -76,8 +76,8 @@
 
   \end{enumerate}
 
-  \item Beabsichtigt der Verantwortliche, die personenbezogenen Daten für einen anderen Zweck weiterzuverarbeiten als
-   den, für den die personenbezogenen Daten erhoben wurden, so stellt er der betroffenen Person vor dieser
+  \item Beabsichtigt der Verantwortliche, die \hyperref[itm:04-1]{personenbezogenen Daten} für einen anderen Zweck weiterzuverarbeiten als
+   den, für den die \hyperref[itm:04-1]{personenbezogenen Daten} erhoben wurden, so stellt er der betroffenen Person vor dieser
    Weiterverarbeitung Informationen über diesen anderen Zweck und alle anderen maßgeblichen Informationen gemäß
    \hyperref[itm:13-2]{Absatz 2} zur Verfügung.
   \label{itm:13-3}  
