--- a/artikel/14.tex
+++ b/artikel/14.tex
@@ -6,7 +6,7 @@
 
 \begin{enumerate}
 
-  \item Werden personenbezogene Daten nicht bei der betroffenen Person erhoben, so teilt der Verantwortliche der
+  \item Werden \hyperref[itm:04-1]{personenbezogene Daten} nicht bei der betroffenen Person erhoben, so teilt der Verantwortliche der
    betroffenen Person Folgendes mit:
   \label{itm:14-1}
 
@@ -18,17 +18,17 @@
     \item zusätzlich die Kontaktdaten des Datenschutzbeauftragten;
     \label{itm:14-1b}
 
-    \item die Zwecke, für die die personenbezogenen Daten verarbeitet werden sollen, sowie die Rechtsgrundlage für die
+    \item die Zwecke, für die die \hyperref[itm:04-1]{personenbezogenen Daten} verarbeitet werden sollen, sowie die Rechtsgrundlage für die
      Verarbeitung;
     \label{itm:14-1c}
 
-    \item die Kategorien personenbezogener Daten, die verarbeitet werden;
+    \item die Kategorien \hyperref[itm:04-1]{personenbezogener Daten}, die verarbeitet werden;
     \label{itm:14-1d}
 
-    \item gegebenenfalls die Empfänger oder Kategorien von Empfängern der personenbezogenen Daten;
+    \item gegebenenfalls die Empfänger oder Kategorien von Empfängern der \hyperref[itm:04-1]{personenbezogenen Daten};
     \label{itm:14-1e}
 
-    \item gegebenenfalls die Absicht des Verantwortlichen, die personenbezogenen Daten an einen Empfänger in einem
+    \item gegebenenfalls die Absicht des Verantwortlichen, die \hyperref[itm:04-1]{personenbezogenen Daten} an einen Empfänger in einem
      Drittland oder einer internationalen Organisation zu übermitteln, sowie das Vorhandensein oder das Fehlen eines
      Angemessenheitsbeschlusses der Kommission oder im Falle von Übermittlungen gemäß \hyperref[ch:46]{Artikel 46} oder
      \hyperref[ch:47]{Artikel 47} oder \hyperref[itm:49-1-2]{Artikel 49 Absatz 1 Unterabsatz 2} einen Verweis auf die
@@ -45,7 +45,7 @@
 
   \begin{enumerate}
   
-    \item die Dauer, für die die personenbezogenen Daten gespeichert werden oder, falls dies nicht möglich ist, die
+    \item die Dauer, für die die \hyperref[itm:04-1]{personenbezogenen Daten} gespeichert werden oder, falls dies nicht möglich ist, die
      Kriterien für die Festlegung dieser Dauer;
     \label{itm:14-2a}
 
@@ -66,7 +66,7 @@
     \item das Bestehen eines Beschwerderechts bei einer Aufsichtsbehörde;
     \label{itm:14-2e}
 
-    \item aus welcher Quelle die personenbezogenen Daten stammen und gegebenenfalls ob sie aus öffentlich zugänglichen
+    \item aus welcher Quelle die \hyperref[itm:04-1]{personenbezogenen Daten} stammen und gegebenenfalls ob sie aus öffentlich zugänglichen
      Quellen stammen;
     \label{itm:14-2f}
 
@@ -84,11 +84,11 @@
 
   \begin{enumerate}
   
-    \item unter Berücksichtigung der spezifischen Umstände der Verarbeitung der personenbezogenen Daten innerhalb einer
-     angemessenen Frist nach Erlangung der personenbezogenen Daten, längstens jedoch innerhalb eines Monats,
+    \item unter Berücksichtigung der spezifischen Umstände der Verarbeitung der \hyperref[itm:04-1]{personenbezogenen Daten} innerhalb einer
+     angemessenen Frist nach Erlangung der \hyperref[itm:04-1]{personenbezogenen Daten}, längstens jedoch innerhalb eines Monats,
     \label{itm:14-3a}
 
-    \item falls die personenbezogenen Daten zur Kommunikation mit der betroffenen Person verwendet werden sollen,
+    \item falls die \hyperref[itm:04-1]{personenbezogenen Daten} zur Kommunikation mit der betroffenen Person verwendet werden sollen,
      spätestens zum Zeitpunkt der ersten Mitteilung an sie, oder,
     \label{itm:14-3b}
 
@@ -98,8 +98,8 @@
 
   \end{enumerate}
 
-  \item Beabsichtigt der Verantwortliche, die personenbezogenen Daten für einen anderen Zweck weiterzuverarbeiten als
-   den, für den die personenbezogenen Daten erlangt wurden, so stellt er der betroffenen Person vor dieser
+  \item Beabsichtigt der Verantwortliche, die \hyperref[itm:04-1]{personenbezogenen Daten} für einen anderen Zweck weiterzuverarbeiten als
+   den, für den die \hyperref[itm:04-1]{personenbezogenen Daten} erlangt wurden, so stellt er der betroffenen Person vor dieser
    Weiterverarbeitung Informationen über diesen anderen Zweck und alle anderen maßgeblichen Informationen gemäß
    \hyperref[itm:14-2]{Absatz 2} zur Verfügung.
   \label{itm:14-4}
@@ -127,7 +127,7 @@
      Person vorsehen, ausdrücklich geregelt ist oder
     \label{itm:14-5c}
 
-    \item die personenbezogenen Daten gemäß dem Unionsrecht oder dem Recht der Mitgliedstaaten dem Berufsgeheimnis,
+    \item die \hyperref[itm:04-1]{personenbezogenen Daten} gemäß dem Unionsrecht oder dem Recht der Mitgliedstaaten dem Berufsgeheimnis,
      einschließlich einer satzungsmäßigen Geheimhaltungspflicht, unterliegen und daher vertraulich behandelt werden
      müssen.
     \label{itm:14-5d}
