--- a/artikel/15.tex
+++ b/artikel/15.tex
@@ -7,8 +7,8 @@
 \begin{enumerate}
 
   \item Die betroffene Person hat das Recht, von dem Verantwortlichen eine Bestätigung darüber zu verlangen, ob sie
-   betreffende personenbezogene Daten verarbeitet werden; ist dies der Fall, so hat sie ein Recht auf Auskunft über
-   diese personenbezogenen Daten und auf folgende Informationen:
+   betreffende \hyperref[itm:04-1]{personenbezogene Daten} verarbeitet werden; ist dies der Fall, so hat sie ein Recht auf Auskunft über
+   diese \hyperref[itm:04-1]{personenbezogenen Daten} und auf folgende Informationen:
   \label{itm:15-1}
 
   \begin{enumerate}
@@ -16,26 +16,26 @@
     \item die Verarbeitungszwecke;
     \label{itm:15-1a}
 
-    \item die Kategorien personenbezogener Daten, die verarbeitet werden;
+    \item die Kategorien \hyperref[itm:04-1]{personenbezogener Daten}, die verarbeitet werden;
     \label{itm:15-1b}
 
-    \item die Empfänger oder Kategorien von Empfängern, gegenüber denen die personenbezogenen Daten offengelegt worden
+    \item die Empfänger oder Kategorien von Empfängern, gegenüber denen die \hyperref[itm:04-1]{personenbezogenen Daten} offengelegt worden
      sind oder noch offengelegt werden, insbesondere bei Empfängern in Drittländern oder bei internationalen
      Organisationen;
     \label{itm:15-1c}
 
-    \item falls möglich die geplante Dauer, für die die personenbezogenen Daten gespeichert werden, oder, falls dies
+    \item falls möglich die geplante Dauer, für die die \hyperref[itm:04-1]{personenbezogenen Daten} gespeichert werden, oder, falls dies
      nicht möglich ist, die Kriterien für die Festlegung dieser Dauer;
     \label{itm:15-1d}
 
-    \item das Bestehen eines Rechts auf Berichtigung oder Löschung der sie betreffenden personenbezogenen Daten oder auf
+    \item das Bestehen eines Rechts auf Berichtigung oder Löschung der sie betreffenden \hyperref[itm:04-1]{personenbezogenen Daten} oder auf
      Einschränkung der Verarbeitung durch den Verantwortlichen oder eines Widerspruchsrechts gegen diese Verarbeitung;
     \label{itm:15-1e}
 
     \item das Bestehen eines Beschwerderechts bei einer Aufsichtsbehörde;
     \label{itm:15-1f}
 
-    \item wenn die personenbezogenen Daten nicht bei der betroffenen Person erhoben werden, alle verfügbaren
+    \item wenn die \hyperref[itm:04-1]{personenbezogenen Daten} nicht bei der betroffenen Person erhoben werden, alle verfügbaren
      Informationen über die Herkunft der Daten;
     \label{itm:15-1g}
 
@@ -47,12 +47,12 @@
 
   \end{enumerate}
 
-  \item Werden personenbezogene Daten an ein Drittland oder an eine internationale Organisation übermittelt, so hat die
+  \item Werden \hyperref[itm:04-1]{personenbezogene Daten} an ein Drittland oder an eine internationale Organisation übermittelt, so hat die
    betroffene Person das Recht, über die geeigneten Garantien gemäß \hyperref[ch:46]{Artikel 46} im Zusammenhang mit der
    Übermittlung unterrichtet zu werden.
   \label{itm:15-2}
 
-  \item Der Verantwortliche stellt eine Kopie der personenbezogenen Daten, die Gegenstand der Verarbeitung sind, zur
+  \item Der Verantwortliche stellt eine Kopie der \hyperref[itm:04-1]{personenbezogenen Daten}, die Gegenstand der Verarbeitung sind, zur
    Verfügung. Für alle weiteren Kopien, die die betroffene Person beantragt, kann der Verantwortliche ein angemessenes
    Entgelt auf der Grundlage der Verwaltungskosten verlangen. Stellt die betroffene Person den Antrag elektronisch, so
    sind die Informationen in einem gängigen elektronischen Format zur Verfügung zu stellen, sofern sie nichts anderes
