--- a/artikel/17.tex
+++ b/artikel/17.tex
@@ -7,13 +7,13 @@
 \begin{enumerate}
 
   \item Die betroffene Person hat das Recht, von dem Verantwortlichen zu verlangen, dass sie betreffende
-   personenbezogene Daten unverzüglich gelöscht werden, und der Verantwortliche ist verpflichtet, personenbezogene
+   \hyperref[itm:04-1]{personenbezogene Daten} unverzüglich gelöscht werden, und der Verantwortliche ist verpflichtet, personenbezogene
    Daten unverzüglich zu löschen, sofern einer der folgenden Gründe zutrifft:
   \label{itm:17-1}
 
   \begin{enumerate}
   
-    \item Die personenbezogenen Daten sind für die Zwecke, für die sie erhoben oder auf sonstige Weise verarbeitet
+    \item Die \hyperref[itm:04-1]{personenbezogenen Daten} sind für die Zwecke, für die sie erhoben oder auf sonstige Weise verarbeitet
      wurden, nicht mehr notwendig.
     \label{itm:17-1a}
 
@@ -27,24 +27,24 @@
      gemäß \hyperref[itm:21-2]{Artikel 21 Absatz 2} Widerspruch gegen die Verarbeitung ein.
     \label{itm:17-1c}
 
-    \item Die personenbezogenen Daten wurden unrechtmäßig verarbeitet.
+    \item Die \hyperref[itm:04-1]{personenbezogenen Daten} wurden unrechtmäßig verarbeitet.
     \label{itm:17-1d}
 
-    \item Die Löschung der personenbezogenen Daten ist zur Erfüllung einer rechtlichen Verpflichtung nach dem
+    \item Die Löschung der \hyperref[itm:04-1]{personenbezogenen Daten} ist zur Erfüllung einer rechtlichen Verpflichtung nach dem
      Unionsrecht oder dem Recht der Mitgliedstaaten erforderlich, dem der Verantwortliche unterliegt.
     \label{itm:17-1e}
 
-    \item Die personenbezogenen Daten wurden in Bezug auf angebotene Dienste der Informationsgesellschaft gemäß
+    \item Die \hyperref[itm:04-1]{personenbezogenen Daten} wurden in Bezug auf angebotene Dienste der Informationsgesellschaft gemäß
      \hyperref[itm:08-1]{Artikel 8 Absatz 1} erhoben.
     \label{itm:17-1f}
 
   \end{enumerate}
 
-  \item Hat der Verantwortliche die personenbezogenen Daten öffentlich gemacht und ist er gemäß \hyperref[itm:17-1]
+  \item Hat der Verantwortliche die \hyperref[itm:04-1]{personenbezogenen Daten} öffentlich gemacht und ist er gemäß \hyperref[itm:17-1]
    {Absatz 1} zu deren Löschung verpflichtet, so trifft er unter Berücksichtigung der verfügbaren Technologie und der
    Implementierungskosten angemessene Maßnahmen, auch technischer Art, um für die Datenverarbeitung Verantwortliche,
-   die die personenbezogenen Daten verarbeiten, darüber zu informieren, dass eine betroffene Person von ihnen die
-   Löschung aller Links zu diesen personenbezogenen Daten oder von Kopien oder Replikationen dieser personenbezogenen
+   die die \hyperref[itm:04-1]{personenbezogenen Daten} verarbeiten, darüber zu informieren, dass eine betroffene Person von ihnen die
+   Löschung aller Links zu diesen \hyperref[itm:04-1]{personenbezogenen Daten} oder von Kopien oder Replikationen dieser personenbezogenen
    Daten verlangt hat.
   \label{itm:17-2}
 
