--- a/artikel/18.tex
+++ b/artikel/18.tex
@@ -12,15 +12,15 @@
 
   \begin{enumerate}
   
-    \item die Richtigkeit der personenbezogenen Daten von der betroffenen Person bestritten wird, und zwar für eine
-     Dauer, die es dem Verantwortlichen ermöglicht, die Richtigkeit der personenbezogenen Daten zu überprüfen,
+    \item die Richtigkeit der \hyperref[itm:04-1]{personenbezogenen Daten} von der betroffenen Person bestritten wird, und zwar für eine
+     Dauer, die es dem Verantwortlichen ermöglicht, die Richtigkeit der \hyperref[itm:04-1]{personenbezogenen Daten} zu überprüfen,
     \label{itm:18-1a}
 
-    \item die Verarbeitung unrechtmäßig ist und die betroffene Person die Löschung der personenbezogenen Daten ablehnt
-     und stattdessen die Einschränkung der Nutzung der personenbezogenen Daten verlangt;
+    \item die Verarbeitung unrechtmäßig ist und die betroffene Person die Löschung der \hyperref[itm:04-1]{personenbezogenen Daten} ablehnt
+     und stattdessen die Einschränkung der Nutzung der \hyperref[itm:04-1]{personenbezogenen Daten} verlangt;
     \label{itm:18-1b}
 
-    \item der Verantwortliche die personenbezogenen Daten für die Zwecke der Verarbeitung nicht länger benötigt, die
+    \item der Verantwortliche die \hyperref[itm:04-1]{personenbezogenen Daten} für die Zwecke der Verarbeitung nicht länger benötigt, die
      betroffene Person sie jedoch zur Geltendmachung, Ausübung oder Verteidigung von Rechtsansprüchen benötigt, oder
     \label{itm:18-1c}
 
@@ -31,7 +31,7 @@
 
   \end{enumerate}
 
-  \item Wurde die Verarbeitung gemäß \hyperref[itm:18-1]{Absatz 1} eingeschränkt, so dürfen diese personenbezogenen Daten
+  \item Wurde die Verarbeitung gemäß \hyperref[itm:18-1]{Absatz 1} eingeschränkt, so dürfen diese \hyperref[itm:04-1]{personenbezogenen Daten}
    -- von ihrer Speicherung abgesehen -- nur mit Einwilligung der betroffenen Person oder zur Geltendmachung, Ausübung
    oder Verteidigung von Rechtsansprüchen oder zum Schutz der Rechte einer anderen natürlichen oder juristischen
    Person oder aus Gründen eines wichtigen öffentlichen Interesses der Union oder eines Mitgliedstaats verarbeitet
