--- a/artikel/19.tex
+++ b/artikel/19.tex
@@ -5,8 +5,8 @@
 
 \addsec{Text der Verordnung}
 
-Der Verantwortliche teilt allen Empfängern, denen personenbezogenen Daten offengelegt wurden, jede Berichtigung oder
-Löschung der personenbezogenen Daten oder eine Einschränkung der Verarbeitung nach \hyperref[ch:16]{Artikel 16},
+Der Verantwortliche teilt allen Empfängern, denen \hyperref[itm:04-1]{personenbezogenen Daten} offengelegt wurden, jede Berichtigung oder
+Löschung der \hyperref[itm:04-1]{personenbezogenen Daten} oder eine Einschränkung der Verarbeitung nach \hyperref[ch:16]{Artikel 16},
 \hyperref[itm:17-1]{Artikel 17 Absatz 1} und \hyperref[ch:18]{Artikel 18} mit, es sei denn, dies erweist sich als
 unmöglich oder ist mit einem unverhältnismäßigen Aufwand verbunden. Der Verantwortliche unterrichtet die betroffene
 Person über diese Empfänger, wenn die betroffene Person dies verlangt.
