--- a/artikel/20.tex
+++ b/artikel/20.tex
@@ -6,10 +6,10 @@
 
 \begin{enumerate}
 
-  \item Die betroffene Person hat das Recht, die sie betreffenden personenbezogenen Daten, die sie einem
+  \item Die betroffene Person hat das Recht, die sie betreffenden \hyperref[itm:04-1]{personenbezogenen Daten}, die sie einem
    Verantwortlichen bereitgestellt hat, in einem strukturierten, gängigen und maschinenlesbaren Format zu erhalten, und
    sie hat das Recht, diese Daten einem anderen Verantwortlichen ohne Behinderung durch den Verantwortlichen, dem die
-   personenbezogenen Daten bereitgestellt wurden, zu übermitteln, sofern
+   \hyperref[itm:04-1]{personenbezogenen Daten} bereitgestellt wurden, zu übermitteln, sofern
   \label{itm:20-1}
 
   \begin{enumerate}
@@ -25,7 +25,7 @@
   \end{enumerate}
 
   \item Bei der Ausübung ihres Rechts auf Datenübertragbarkeit gemäß \hyperref[itm:20-1]{Absatz 1} hat die betroffene
-   Person das Recht, zu erwirken, dass die personenbezogenen Daten direkt von einem Verantwortlichen einem anderen
+   Person das Recht, zu erwirken, dass die \hyperref[itm:04-1]{personenbezogenen Daten} direkt von einem Verantwortlichen einem anderen
    Verantwortlichen übermittelt werden, soweit dies technisch machbar ist.
   \label{itm:20-2}
 
