--- a/artikel/22.tex
+++ b/artikel/22.tex
@@ -36,7 +36,7 @@
    seitens des Verantwortlichen, auf Darlegung des eigenen Standpunkts und auf Anfechtung der Entscheidung gehört.
   \label{itm:22-3}
 
-  \item Entscheidungen nach \hyperref[itm:22-2]{Absatz 2} dürfen nicht auf besonderen Kategorien personenbezogener Daten
+  \item Entscheidungen nach \hyperref[itm:22-2]{Absatz 2} dürfen nicht auf besonderen Kategorien \hyperref[itm:04-1]{personenbezogener Daten}
   nach \hyperref[itm:09-1]{Artikel 9 Absatz 1} beruhen, sofern nicht \hyperref[itm:09-2]{Artikel 9 Absatz 2} Buchstabe
   \hyperref[itm:09-2a]{a} oder \hyperref[itm:09-2g]{g} gilt und angemessene Maßnahmen zum Schutz der Rechte und
    Freiheiten sowie der berechtigten Interessen der betroffenen Person getroffen wurden.
