--- a/artikel/23.tex
+++ b/artikel/23.tex
@@ -65,7 +65,7 @@
     \item die Zwecke der Verarbeitung oder die Verarbeitungskategorien,
     \label{itm:23-2a}
 
-    \item die Kategorien personenbezogener Daten,
+    \item die Kategorien \hyperref[itm:04-1]{personenbezogener Daten},
     \label{itm:23-2b}
 
     \item den Umfang der vorgenommenen Beschränkungen,
