--- a/artikel/25.tex
+++ b/artikel/25.tex
@@ -17,10 +17,10 @@
   \label{itm:25-1}
 
   \item Der Verantwortliche trifft geeignete technische und organisatorische Maßnahmen, die sicherstellen, dass durch
-   Voreinstellung grundsätzlich nur personenbezogene Daten, deren Verarbeitung für den jeweiligen bestimmten
+   Voreinstellung grundsätzlich nur \hyperref[itm:04-1]{personenbezogene Daten}, deren Verarbeitung für den jeweiligen bestimmten
    Verarbeitungszweck erforderlich ist, verarbeitet werden. Diese Verpflichtung gilt für die Menge der erhobenen
-   personenbezogenen Daten, den Umfang ihrer Verarbeitung, ihre Speicherfrist und ihre Zugänglichkeit. Solche Maßnahmen
-   müssen insbesondere sicherstellen, dass personenbezogene Daten durch Voreinstellungen nicht ohne Eingreifen der
+   \hyperref[itm:04-1]{personenbezogenen Daten}, den Umfang ihrer Verarbeitung, ihre Speicherfrist und ihre Zugänglichkeit. Solche Maßnahmen
+   müssen insbesondere sicherstellen, dass \hyperref[itm:04-1]{personenbezogene Daten} durch Voreinstellungen nicht ohne Eingreifen der
    Person einer unbestimmten Zahl von natürlichen Personen zugänglich gemacht werden.
   \label{itm:25-2}
 
