--- a/artikel/27.tex
+++ b/artikel/27.tex
@@ -16,7 +16,7 @@
   \begin{enumerate}
   
     \item eine Verarbeitung, die gelegentlich erfolgt, nicht die umfangreiche Verarbeitung besonderer Datenkategorien im
-     Sinne des \hyperref[itm:09-1]{Artikels 9 Absatz 1} oder die umfangreiche Verarbeitung von personenbezogenen Daten
+     Sinne des \hyperref[itm:09-1]{Artikels 9 Absatz 1} oder die umfangreiche Verarbeitung von \hyperref[itm:04-1]{personenbezogenen Daten}
      über strafrechtliche Verurteilungen und Straftaten im Sinne des \hyperref[ch:10]{Artikels 10} einschließt und
      unter Berücksichtigung der Art, der Umstände, des Umfangs und der Zwecke der Verarbeitung voraussichtlich nicht zu
      einem Risiko für die Rechte und Freiheiten natürlicher Personen führt, oder
@@ -28,7 +28,7 @@
   \end{enumerate}
 
   \item Der Vertreter muss in einem der Mitgliedstaaten niedergelassen sein, in denen die betroffenen Personen, deren
-   personenbezogene Daten im Zusammenhang mit den ihnen angebotenen Waren oder Dienstleistungen verarbeitet werden oder
+   \hyperref[itm:04-1]{personenbezogene Daten} im Zusammenhang mit den ihnen angebotenen Waren oder Dienstleistungen verarbeitet werden oder
    deren Verhalten beobachtet wird, sich befinden.
   \label{itm:27-3}
 
