--- a/artikel/28.tex
+++ b/artikel/28.tex
@@ -22,22 +22,22 @@
   \item Die Verarbeitung durch einen Auftragsverarbeiter erfolgt auf der Grundlage eines Vertrags oder eines anderen
    Rechtsinstruments nach dem Unionsrecht oder dem Recht der Mitgliedstaaten, der bzw. das den Auftragsverarbeiter in
    Bezug auf den Verantwortlichen bindet und in dem Gegenstand und Dauer der Verarbeitung, Art und Zweck der
-   Verarbeitung, die Art der personenbezogenen Daten, die Kategorien betroffener Personen und die Pflichten und Rechte
+   Verarbeitung, die Art der \hyperref[itm:04-1]{personenbezogenen Daten}, die Kategorien betroffener Personen und die Pflichten und Rechte
    des Verantwortlichen festgelegt sind. Dieser Vertrag bzw. dieses andere Rechtsinstrument sieht insbesondere vor,
    dass der Auftragsverarbeiter
   \label{itm:28-3-1}
 
   \begin{enumerate}
   
-    \item die personenbezogenen Daten nur auf dokumentierte Weisung des Verantwortlichen -- auch in Bezug auf die
-     Übermittlung personenbezogener Daten an ein Drittland oder eine internationale Organisation -- verarbeitet, sofern
+    \item die \hyperref[itm:04-1]{personenbezogenen Daten} nur auf dokumentierte Weisung des Verantwortlichen -- auch in Bezug auf die
+     Übermittlung \hyperref[itm:04-1]{personenbezogener Daten} an ein Drittland oder eine internationale Organisation -- verarbeitet, sofern
      er nicht durch das Recht der Union oder der Mitgliedstaaten, dem der Auftragsverarbeiter unterliegt, hierzu
      verpflichtet ist; in einem solchen Fall teilt der Auftragsverarbeiter dem Verantwortlichen diese rechtlichen
      Anforderungen vor der Verarbeitung mit, sofern das betreffende Recht eine solche Mitteilung nicht wegen eines
      wichtigen öffentlichen Interesses verbietet;
     \label{itm:28-3-1a}
 
-    \item gewährleistet, dass sich die zur Verarbeitung der personenbezogenen Daten befugten Personen zur
+    \item gewährleistet, dass sich die zur Verarbeitung der \hyperref[itm:04-1]{personenbezogenen Daten} befugten Personen zur
      Vertraulichkeit verpflichtet haben oder einer angemessenen gesetzlichen Verschwiegenheitspflicht unterliegen;
     \label{itm:28-3-1b}
 
@@ -58,9 +58,9 @@
      Pflichten unterstützt;
     \label{itm:28-3-1f}
 
-    \item nach Abschluss der Erbringung der Verarbeitungsleistungen alle personenbezogenen Daten nach Wahl des
+    \item nach Abschluss der Erbringung der Verarbeitungsleistungen alle \hyperref[itm:04-1]{personenbezogenen Daten} nach Wahl des
      Verantwortlichen entweder löscht oder zurückgibt, sofern nicht nach dem Unionsrecht oder dem Recht der
-     Mitgliedstaaten eine Verpflichtung zur Speicherung der personenbezogenen Daten besteht;
+     Mitgliedstaaten eine Verpflichtung zur Speicherung der \hyperref[itm:04-1]{personenbezogenen Daten} besteht;
     \label{itm:28-3-1g}
 
     \item dem Verantwortlichen alle erforderlichen Informationen zum Nachweis der Einhaltung der in diesem Artikel
