--- a/artikel/29.tex
+++ b/artikel/29.tex
@@ -5,7 +5,7 @@
 \addsec{Text der Verordnung}
 
 Der Auftragsverarbeiter und jede dem Verantwortlichen oder dem Auftragsverarbeiter unterstellte Person, die Zugang zu
-personenbezogenen Daten hat, dürfen diese Daten ausschließlich auf Weisung des Verantwortlichen verarbeiten, es sei
+\hyperref[itm:04-1]{personenbezogenen Daten} hat, dürfen diese Daten ausschließlich auf Weisung des Verantwortlichen verarbeiten, es sei
 denn, dass sie nach dem Unionsrecht oder dem Recht der Mitgliedstaaten zur Verarbeitung verpflichtet sind.
 
 \addsec{Eigene Notizen}
