--- a/artikel/30.tex
+++ b/artikel/30.tex
@@ -19,14 +19,14 @@
     \item die Zwecke der Verarbeitung;
     \label{itm:30-1b}
 
-    \item eine Beschreibung der Kategorien betroffener Personen und der Kategorien personenbezogener Daten;
+    \item eine Beschreibung der Kategorien betroffener Personen und der Kategorien \hyperref[itm:04-1]{personenbezogener Daten};
     \label{itm:30-1c}
 
-    \item die Kategorien von Empfängern, gegenüber denen die personenbezogenen Daten offengelegt worden sind oder noch
+    \item die Kategorien von Empfängern, gegenüber denen die \hyperref[itm:04-1]{personenbezogenen Daten} offengelegt worden sind oder noch
      offengelegt werden, einschließlich Empfänger in Drittländern oder internationalen Organisationen;
     \label{itm:30-1d}
 
-    \item gegebenenfalls Übermittlungen von personenbezogenen Daten an ein Drittland oder an eine internationale
+    \item gegebenenfalls Übermittlungen von \hyperref[itm:04-1]{personenbezogenen Daten} an ein Drittland oder an eine internationale
      Organisation, einschließlich der Angabe des betreffenden Drittlands oder der betreffenden internationalen
      Organisation, sowie bei den in \hyperref[itm:49-1-2]{Artikel 49 Absatz 1 Unterabsatz 2} genannten
      Datenübermittlungen die Dokumentierung geeigneter Garantien;
@@ -55,7 +55,7 @@
     \item die Kategorien von Verarbeitungen, die im Auftrag jedes Verantwortlichen durchgeführt werden;
     \label{itm:30-2b}
 
-    \item gegebenenfalls Übermittlungen von personenbezogenen Daten an ein Drittland oder an eine internationale
+    \item gegebenenfalls Übermittlungen von \hyperref[itm:04-1]{personenbezogenen Daten} an ein Drittland oder an eine internationale
      Organisation, einschließlich der Angabe des betreffenden Drittlands oder der betreffenden internationalen
      Organisation, sowie bei den in \hyperref[itm:49-1-2]{Artikel 49 Absatz 1 Unterabsatz 2} genannten
      Datenübermittlungen die Dokumentierung geeigneter Garantien;
@@ -79,7 +79,7 @@
    Unternehmen oder Einrichtungen, die weniger als 250 Mitarbeiter beschäftigen, sofern die von ihnen vorgenommene
    Verarbeitung nicht ein Risiko für die Rechte und Freiheiten der betroffenen Personen birgt, die Verarbeitung nicht
    nur gelegentlich erfolgt oder nicht die Verarbeitung besonderer Datenkategorien gemäß \hyperref[itm:09-1]{Artikel 9
-   Absatz 1} bzw. die  Verarbeitung von personenbezogenen Daten über strafrechtliche Verurteilungen und Straftaten im
+   Absatz 1} bzw. die  Verarbeitung von \hyperref[itm:04-1]{personenbezogenen Daten} über strafrechtliche Verurteilungen und Straftaten im
    Sinne des \hyperref[ch:10]{Artikels 10} einschließt.
   \label{itm:30-5}
 
