--- a/artikel/32.tex
+++ b/artikel/32.tex
@@ -15,14 +15,14 @@
 
   \begin{enumerate}
   
-    \item die Pseudonymisierung und Verschlüsselung personenbezogener Daten;
+    \item die Pseudonymisierung und Verschlüsselung \hyperref[itm:04-1]{personenbezogener Daten};
     \label{itm:32-1a}
 
     \item die Fähigkeit, die Vertraulichkeit, Integrität, Verfügbarkeit und Belastbarkeit der Systeme und Dienste im
      Zusammenhang mit der Verarbeitung auf Dauer sicherzustellen;
     \label{itm:32-1b}
 
-    \item die Fähigkeit, die Verfügbarkeit der personenbezogenen Daten und den Zugang zu ihnen bei einem physischen oder
+    \item die Fähigkeit, die Verfügbarkeit der \hyperref[itm:04-1]{personenbezogenen Daten} und den Zugang zu ihnen bei einem physischen oder
      technischen Zwischenfall rasch wiederherzustellen;
     \label{itm:32-1c}
 
@@ -34,7 +34,7 @@
 
   \item Bei der Beurteilung des angemessenen Schutzniveaus sind insbesondere die Risiken zu berücksichtigen, die mit der
    Verarbeitung verbunden sind, insbesondere durch -- ob unbeabsichtigt oder unrechtmäßig -- Vernichtung, Verlust,
-   Veränderung oder unbefugte Offenlegung von beziehungsweise unbefugten Zugang zu personenbezogenen Daten, die
+   Veränderung oder unbefugte Offenlegung von beziehungsweise unbefugten Zugang zu \hyperref[itm:04-1]{personenbezogenen Daten}, die
    übermittelt, gespeichert oder auf andere Weise verarbeitet wurden.
   \label{itm:32-2}
 
@@ -44,7 +44,7 @@
   \label{itm:32-3}
 
   \item Der Verantwortliche und der Auftragsverarbeiter unternehmen Schritte, um sicherzustellen, dass ihnen
-   unterstellte natürliche Personen, die Zugang zu personenbezogenen Daten haben, diese nur auf Anweisung des
+   unterstellte natürliche Personen, die Zugang zu \hyperref[itm:04-1]{personenbezogenen Daten} haben, diese nur auf Anweisung des
    Verantwortlichen verarbeiten, es sei denn, sie sind nach dem Recht der Union oder der Mitgliedstaaten zur
    Verarbeitung verpflichtet.
   \label{itm:32-4}
