--- a/artikel/38.tex
+++ b/artikel/38.tex
@@ -7,12 +7,12 @@
 \begin{enumerate}
 
   \item Der Verantwortliche und der Auftragsverarbeiter stellen sicher, dass der Datenschutzbeauftragte ordnungsgemäß
-   und frühzeitig in alle mit dem Schutz personenbezogener Daten zusammenhängenden Fragen eingebunden wird.
+   und frühzeitig in alle mit dem Schutz \hyperref[itm:04-1]{personenbezogener Daten} zusammenhängenden Fragen eingebunden wird.
   \label{itm:38-1}
 
   \item Der Verantwortliche und der Auftragsverarbeiter unterstützen den Datenschutzbeauftragten bei der Erfüllung
    seiner Aufgaben gemäß \hyperref[ch:39]{Artikel 39}, indem sie die für die Erfüllung dieser Aufgaben erforderlichen
-   Ressourcen und den Zugang zu personenbezogenen Daten und Verarbeitungsvorgängen sowie die zur Erhaltung seines
+   Ressourcen und den Zugang zu \hyperref[itm:04-1]{personenbezogenen Daten} und Verarbeitungsvorgängen sowie die zur Erhaltung seines
    Fachwissens erforderlichen Ressourcen zur Verfügung stellen.
   \label{itm:38-2}
 
