--- a/artikel/39.tex
+++ b/artikel/39.tex
@@ -18,7 +18,7 @@
 
     \item Überwachung der Einhaltung dieser Verordnung, anderer Datenschutzvorschriften der Union bzw. der
      Mitgliedstaaten sowie der Strategien des Verantwortlichen oder des Auftragsverarbeiters für den Schutz
-     personenbezogener Daten einschließlich der Zuweisung von Zuständigkeiten, der Sensibilisierung und Schulung der an
+     \hyperref[itm:04-1]{personenbezogener Daten} einschließlich der Zuweisung von Zuständigkeiten, der Sensibilisierung und Schulung der an
      den Verarbeitungsvorgängen beteiligten Mitarbeiter und der diesbezüglichen Überprüfungen;
     \label{itm:39-1b}
 
