--- a/artikel/42.tex
+++ b/artikel/42.tex
@@ -17,7 +17,7 @@
    können auch datenschutzspezifische Zertifizierungsverfahren, Siegel oder Prüfzeichen, die gemäß \hyperref[itm:42-5]
    {Absatz 5 des vorliegenden Artikels} genehmigt worden sind, vorgesehen werden, um nachzuweisen, dass die
    Verantwortlichen oder Auftragsverarbeiter, die gemäß \hyperref[ch:3]{Artikel 3} nicht unter diese Verordnung
-   fallen, im Rahmen der Übermittlung personenbezogener Daten an Drittländer oder internationale Organisationen nach
+   fallen, im Rahmen der Übermittlung \hyperref[itm:04-1]{personenbezogener Daten} an Drittländer oder internationale Organisationen nach
    Maßgabe von \hyperref[itm:46-2f]{Artikel 46 Absatz 2 Buchstabe f} geeignete Garantien bieten. Diese Verantwortlichen
    oder Auftragsverarbeiter gehen mittels vertraglicher oder sonstiger rechtlich bindender Instrumente die verbindliche
    und durchsetzbare Verpflichtung ein, diese geeigneten Garantien anzuwenden, auch im Hinblick auf die Rechte der
