--- a/artikel/45.tex
+++ b/artikel/45.tex
@@ -6,7 +6,7 @@
 
 \begin{enumerate}
 
-  \item Eine Übermittlung personenbezogener Daten an ein Drittland oder eine internationale Organisation darf
+  \item Eine Übermittlung \hyperref[itm:04-1]{personenbezogener Daten} an ein Drittland oder eine internationale Organisation darf
    vorgenommen werden, wenn die Kommission beschlossen hat, dass das betreffende Drittland, ein Gebiet oder ein oder
    mehrere spezifische Sektoren in diesem Drittland oder die betreffende internationale Organisation ein angemessenes
    Schutzniveau bietet. Eine solche Datenübermittlung bedarf keiner besonderen Genehmigung.
@@ -21,11 +21,11 @@
     \item die Rechtsstaatlichkeit, die Achtung der Menschenrechte und Grundfreiheiten, die in dem betreffenden Land bzw.
      bei der betreffenden internationalen Organisation geltenden einschlägigen Rechtsvorschriften sowohl allgemeiner
      als auch sektoraler Art -- auch in Bezug auf öffentliche Sicherheit, Verteidigung, nationale Sicherheit und
-     Strafrecht sowie Zugang der Behörden zu personenbezogenen Daten -- sowie die Anwendung dieser Rechtsvorschriften,
+     Strafrecht sowie Zugang der Behörden zu \hyperref[itm:04-1]{personenbezogenen Daten} -- sowie die Anwendung dieser Rechtsvorschriften,
      Datenschutzvorschriften, Berufsregeln und Sicherheitsvorschriften einschließlich der Vorschriften für die
-     Weiterübermittlung personenbezogener Daten an ein anderes Drittland bzw. eine andere internationale Organisation,
+     Weiterübermittlung \hyperref[itm:04-1]{personenbezogener Daten} an ein anderes Drittland bzw. eine andere internationale Organisation,
      die Rechtsprechung sowie wirksame und durchsetzbare Rechte der betroffenen Person und wirksame
-     verwaltungsrechtliche und gerichtliche Rechtsbehelfe für betroffene Personen, deren personenbezogene Daten
+     verwaltungsrechtliche und gerichtliche Rechtsbehelfe für betroffene Personen, deren \hyperref[itm:04-1]{personenbezogene Daten}
      übermittelt werden,
     \label{itm:45-2a}
 
@@ -39,7 +39,7 @@
     \item die von dem betreffenden Drittland bzw. der betreffenden internationalen Organisation eingegangenen
      internationalen Verpflichtungen oder andere Verpflichtungen, die sich aus rechtsverbindlichen Übereinkünften oder
      Instrumenten sowie aus der Teilnahme des Drittlands oder der internationalen Organisation an multilateralen oder
-     regionalen Systemen insbesondere in Bezug auf den Schutz personenbezogener Daten ergeben.
+     regionalen Systemen insbesondere in Bezug auf den Schutz \hyperref[itm:04-1]{personenbezogener Daten} ergeben.
     \label{itm:45-2c}
 
   \end{enumerate}
@@ -79,7 +79,7 @@
    erlassenen Beschluss geführt hat.
   \label{itm:45-6}
 
-  \item Übermittlungen personenbezogener Daten an das betreffende Drittland, das Gebiet oder einen oder mehrere
+  \item Übermittlungen \hyperref[itm:04-1]{personenbezogener Daten} an das betreffende Drittland, das Gebiet oder einen oder mehrere
    spezifische Sektoren in diesem Drittland oder an die betreffende internationale Organisation gemäß den Artikeln
    \hyperref[ch:46]{46} bis \hyperref[ch:49]{49} werden durch einen Beschluss nach \hyperref[itm:45-5]{Absatz 5 des
     vorliegenden Artikels} nicht berührt.
