--- a/artikel/46.tex
+++ b/artikel/46.tex
@@ -7,7 +7,7 @@
 \begin{enumerate}
 
   \item Falls kein Beschluss nach \hyperref[itm:45-3]{Artikel 45 Absatz 3} vorliegt, darf ein Verantwortlicher oder ein
-   Auftragsverarbeiter personenbezogene Daten an ein Drittland oder eine internationale Organisation nur übermitteln,
+   Auftragsverarbeiter \hyperref[itm:04-1]{personenbezogene Daten} an ein Drittland oder eine internationale Organisation nur übermitteln,
    sofern der Verantwortliche oder der Auftragsverarbeiter geeignete Garantien vorgesehen hat und sofern den
    betroffenen Personen durchsetzbare Rechte und wirksame Rechtsbehelfe zur Verfügung stehen.
   \label{itm:46-1}
@@ -52,7 +52,7 @@
   \begin{enumerate}
   
     \item Vertragsklauseln, die zwischen dem Verantwortlichen oder dem Auftragsverarbeiter und dem Verantwortlichen, dem
-     Auftragsverarbeiter oder dem Empfänger der personenbezogenen Daten im Drittland oder der internationalen
+     Auftragsverarbeiter oder dem Empfänger der \hyperref[itm:04-1]{personenbezogenen Daten} im Drittland oder der internationalen
      Organisation vereinbart wurden, oder
     \label{itm:46-3a}
 
