--- a/artikel/47.tex
+++ b/artikel/47.tex
@@ -18,7 +18,7 @@
     \label{itm:47-1a}
 
     \item den betroffenen Personen ausdrücklich durchsetzbare Rechte in Bezug auf die Verarbeitung ihrer
-     personenbezogenen Daten übertragen und
+     \hyperref[itm:04-1]{personenbezogenen Daten} übertragen und
     \label{itm:47-1b}
 
     \item die in \hyperref[itm:47-2]{Absatz 2} festgelegten Anforderungen erfüllen.
@@ -37,7 +37,7 @@
     \label{itm:4722a}
 
     \item die betreffenden Datenübermittlungen oder Reihen von Datenübermittlungen einschließlich der betreffenden Arten
-     personenbezogener Daten, Art und Zweck der Datenverarbeitung, Art der betroffenen Personen und das betreffende
+     \hyperref[itm:04-1]{personenbezogener Daten}, Art und Zweck der Datenverarbeitung, Art der betroffenen Personen und das betreffende
      Drittland beziehungsweise die betreffenden Drittländer;
     \label{itm:47-2b}
 
