--- a/artikel/51.tex
+++ b/artikel/51.tex
@@ -8,7 +8,7 @@
 
   \item Jeder Mitgliedstaat sieht vor, dass eine oder mehrere unabhängige Behörden für die Überwachung der Anwendung
    dieser Verordnung zuständig sind, damit die Grundrechte und Grundfreiheiten natürlicher Personen bei der
-   Verarbeitung geschützt werden und der freie Verkehr personenbezogener Daten in der Union erleichtert wird
+   Verarbeitung geschützt werden und der freie Verkehr \hyperref[itm:04-1]{personenbezogener Daten} in der Union erleichtert wird
    (im Folgenden „Aufsichtsbehörde“).
   \label{itm:51-1}
 
