--- a/artikel/57.tex
+++ b/artikel/57.tex
@@ -47,7 +47,7 @@
      einer anderen Aufsichtsbehörde oder einer anderen Behörde;
     \label{itm:57-1h}
 
-    \item maßgebliche Entwicklungen verfolgen, soweit sie sich auf den Schutz personenbezogener Daten auswirken,
+    \item maßgebliche Entwicklungen verfolgen, soweit sie sich auf den Schutz \hyperref[itm:04-1]{personenbezogener Daten} auswirken,
      insbesondere die Entwicklung der Informations- und Kommunikationstechnologie und der Geschäftspraktiken;
     \label{itm:57-1i}
 
@@ -98,7 +98,7 @@
      ergriffene Maßnahmen und
     \label{itm:57-1u}
 
-    \item jede sonstige Aufgabe im Zusammenhang mit dem Schutz personenbezogener Daten erfüllen.
+    \item jede sonstige Aufgabe im Zusammenhang mit dem Schutz \hyperref[itm:04-1]{personenbezogener Daten} erfüllen.
     \label{itm:57-1v}
 
   \end{enumerate}
