--- a/artikel/70.tex
+++ b/artikel/70.tex
@@ -17,7 +17,7 @@
       Aufsichtsbehörden;
     \label{itm:70-1a}
 
-    \item Beratung der Kommission in allen Fragen, die im Zusammenhang mit dem Schutz personenbezogener Daten in der
+    \item Beratung der Kommission in allen Fragen, die im Zusammenhang mit dem Schutz \hyperref[itm:04-1]{personenbezogener Daten} in der
      Union stehen, einschließlich etwaiger Vorschläge zur Änderung dieser Verordnung;
     \label{itm:70-1b}
 
@@ -27,7 +27,7 @@
     \label{itm:70-1c}
 
     \item Bereitstellung von Leitlinien, Empfehlungen und bewährten Verfahren zu Verfahren für die Löschung gemäß
-     \hyperref[itm:17-2]{Artikel 17 Absatz 2} von Links zu personenbezogenen Daten oder Kopien oder Replikationen dieser
+     \hyperref[itm:17-2]{Artikel 17 Absatz 2} von Links zu \hyperref[itm:04-1]{personenbezogenen Daten} oder Kopien oder Replikationen dieser
      Daten aus öffentlich zugänglichen Kommunikationsdiensten;
     \label{itm:70-1d}
 
@@ -42,28 +42,28 @@
     \label{itm:70-1f}
 
     \item Bereitstellung von Leitlinien, Empfehlungen und bewährten Verfahren gemäß \hyperref[itm:70-1e]{Buchstabe e des
-     vorliegenden Absatzes} für die Feststellung von Verletzungen des Schutzes personenbezogener Daten und die
+     vorliegenden Absatzes} für die Feststellung von Verletzungen des Schutzes \hyperref[itm:04-1]{personenbezogener Daten} und die
      Festlegung der Unverzüglichkeit im Sinne des \hyperref[ch:33]{Artikels 33} Absätze \hyperref[itm:33-1]{1} und
      \hyperref[itm:33-2]{2}, und zu den spezifischen Umständen, unter denen der Verantwortliche oder der
-     Auftragsverarbeiter die Verletzung des Schutzes personenbezogener Daten zu melden hat;
+     Auftragsverarbeiter die Verletzung des Schutzes \hyperref[itm:04-1]{personenbezogener Daten} zu melden hat;
     \label{itm:70-1g}
 
     \item Bereitstellung von Leitlinien, Empfehlungen und bewährten Verfahren gemäß \hyperref[itm:70-1e]{Buchstabe e des
-     vorliegenden Absatzes} zu den Umständen, unter denen eine Verletzung des Schutzes personenbezogener Daten
+     vorliegenden Absatzes} zu den Umständen, unter denen eine Verletzung des Schutzes \hyperref[itm:04-1]{personenbezogener Daten}
      voraussichtlich ein hohes Risiko für die Rechte und Freiheiten natürlicher Personen im Sinne des \hyperref
      [itm:34-1]{Artikels 34 Absatz 1} zur Folge hat;
     \label{itm:70-1h}
 
     \item Bereitstellung von Leitlinien, Empfehlungen und bewährten Verfahren gemäß \hyperref[itm:70-1e]{Buchstabe e des
      vorliegenden Absatzes} zur näheren Bestimmung der in \hyperref[ch:47]{Artikel 47} aufgeführten Kriterien und
-     Anforderungen für die Übermittlungen personenbezogener Daten, die auf verbindlichen internen
+     Anforderungen für die Übermittlungen \hyperref[itm:04-1]{personenbezogener Daten}, die auf verbindlichen internen
      Datenschutzvorschriften von Verantwortlichen oder Auftragsverarbeitern beruhen, und der dort aufgeführten weiteren
-     erforderlichen Anforderungen zum Schutz personenbezogener Daten der betroffenen Personen;
+     erforderlichen Anforderungen zum Schutz \hyperref[itm:04-1]{personenbezogener Daten} der betroffenen Personen;
     \label{itm:70-1i}
 
     \item Bereitstellung von Leitlinien, Empfehlungen und bewährten Verfahren gemäß \hyperref[itm:70-1e]{Buchstabe e des
      vorliegenden Absatzes} zur näheren Bestimmung der Kriterien und Bedingungen für die Übermittlungen
-     personenbezogener Daten gemäß \hyperref[itm:49-1-1]{Artikel 49 Absatz 1};
+     \hyperref[itm:04-1]{personenbezogener Daten} gemäß \hyperref[itm:49-1-1]{Artikel 49 Absatz 1};
     \label{itm:70-1j}
 
     \item Ausarbeitung von Leitlinien für die Aufsichtsbehörden in Bezug auf die Anwendung von Maßnahmen nach \hyperref
