--- a/artikel/80.tex
+++ b/artikel/80.tex
@@ -9,7 +9,7 @@
   \item Die betroffene Person hat das Recht, eine Einrichtung, Organisationen oder Vereinigung ohne
    Gewinnerzielungsabsicht, die ordnungsgemäß nach dem Recht eines Mitgliedstaats gegründet ist, deren satzungsmäßige
    Ziele im öffentlichem Interesse liegen und die im Bereich des Schutzes der Rechte und Freiheiten von betroffenen
-   Personen in Bezug auf den Schutz ihrer personenbezogenen Daten tätig ist, zu beauftragen, in ihrem Namen eine
+   Personen in Bezug auf den Schutz ihrer \hyperref[itm:04-1]{personenbezogenen Daten} tätig ist, zu beauftragen, in ihrem Namen eine
    Beschwerde einzureichen, in ihrem Namen die in den Artikeln \hyperref[ch:77]{77}, \hyperref[ch:78]{78} und \hyperref
    [ch:79]{79} genannten Rechte wahrzunehmen und das Recht auf Schadensersatz gemäß \hyperref[ch:82]{Artikel 82} in
    Anspruch zu nehmen, sofern dieses im Recht der Mitgliedstaaten vorgesehen ist.
