--- a/artikel/83.tex
+++ b/artikel/83.tex
@@ -43,7 +43,7 @@
      Auswirkungen zu mindern;
     \label{itm:83-2f}
 
-    \item Kategorien personenbezogener Daten, die von dem Verstoß betroffen sind;
+    \item Kategorien \hyperref[itm:04-1]{personenbezogener Daten}, die von dem Verstoß betroffen sind;
     \label{itm:83-2g}
 
     \item Art und Weise, wie der Verstoß der Aufsichtsbehörde bekannt wurde, insbesondere ob und gegebenenfalls in
@@ -103,7 +103,7 @@
     \item die Rechte der betroffenen Person gemäß den Artikeln \hyperref[ch:12]{12} bis \hyperref[ch:22]{22};
     \label{itm:83-5b}
 
-    \item die Übermittlung personenbezogener Daten an einen Empfänger in einem Drittland oder an eine internationale
+    \item die Übermittlung \hyperref[itm:04-1]{personenbezogener Daten} an einen Empfänger in einem Drittland oder an eine internationale
      Organisation gemäß den Artikeln \hyperref[ch:44]{44} bis \hyperref[ch:49]{49};
     \label{itm:83-5c}
 
