--- a/artikel/89.tex
+++ b/artikel/89.tex
@@ -17,7 +17,7 @@
    Zwecke auf diese Weise erfüllt.
   \label{itm:89-1}
 
-  \item Werden personenbezogene Daten zu wissenschaftlichen oder historischen Forschungszwecken oder zu statistischen
+  \item Werden \hyperref[itm:04-1]{personenbezogene Daten} zu wissenschaftlichen oder historischen Forschungszwecken oder zu statistischen
    Zwecken verarbeitet, können vorbehaltlich der Bedingungen und Garantien gemäß \hyperref[itm:89-1]{Absatz 1 des
    vorliegenden Artikels} im Unionsrecht oder im Recht der Mitgliedstaaten insoweit Ausnahmen von den Rechten gemäß der
    Artikel \hyperref[ch:15]{15}, \hyperref[ch:16]{16}, \hyperref[ch:18]{18} und \hyperref[ch:21]{21} vorgesehen werden,
@@ -25,7 +25,7 @@
    beeinträchtigen und solche Ausnahmen für die Erfüllung dieser Zwecke notwendig sind.
   \label{itm:89-2}
 
-  \item Werden personenbezogene Daten für im öffentlichen Interesse liegende Archivzwecke verarbeitet, können
+  \item Werden \hyperref[itm:04-1]{personenbezogene Daten} für im öffentlichen Interesse liegende Archivzwecke verarbeitet, können
    vorbehaltlich der Bedingungen und Garantien gemäß \hyperref[itm:89-1]{Absatz 1 des vorliegenden Artikels} im
    Unionsrecht oder im Recht der Mitgliedstaaten insoweit Ausnahmen von den Rechten gemäß der Artikel \hyperref[ch:15]
    {15}, \hyperref[ch:16]{16}, \hyperref[ch:18]{18}, \hyperref[ch:19]{19}, \hyperref[ch:20]{20} und \hyperref[ch:21]
