--- a/artikel/96.tex
+++ b/artikel/96.tex
@@ -4,7 +4,7 @@
 
 \addsec{Text der Verordnung}
 
-Internationale Übereinkünfte, die die Übermittlung personenbezogener Daten an Drittländer oder internationale
+Internationale Übereinkünfte, die die Übermittlung \hyperref[itm:04-1]{personenbezogener Daten} an Drittländer oder internationale
 Organisationen mit sich bringen, die von den Mitgliedstaaten vor dem 24. Mai 2016 abgeschlossen wurden und die im
 Einklang mit dem vor diesem Tag geltenden Unionsrecht stehen, bleiben in Kraft, bis sie geändert, ersetzt oder
 gekündigt werden.
