--- a/artikel/11.tex
+++ b/artikel/11.tex
@@ -6,7 +6,7 @@
 
 \begin{enumerate}
 
-  \item Ist für die Zwecke, für die ein Verantwortlicher personenbezogene Daten verarbeitet, die Identifizierung der
+  \item Ist für die Zwecke, für die ein Verantwortlicher \hyperref[itm:04-1]{personenbezogene Daten} verarbeitet, die Identifizierung der
    betroffenen Person durch den Verantwortlichen nicht oder nicht mehr erforderlich, so ist dieser nicht verpflichtet,
    zur bloßen Einhaltung dieser Verordnung zusätzliche Informationen aufzubewahren, einzuholen oder zu verarbeiten, um
    die betroffene Person zu identifizieren.
