--- a/artikel/16.tex
+++ b/artikel/16.tex
@@ -5,8 +5,8 @@
 \addsec{Text der Verordnung}
 
 Die betroffene Person hat das Recht, von dem Verantwortlichen unverzüglich die Berichtigung sie betreffender unrichtiger
-personenbezogener Daten zu verlangen. Unter Berücksichtigung der Zwecke der Verarbeitung hat die betroffene Person das
-Recht, die Vervollständigung unvollständiger personenbezogener Daten -- auch mittels einer ergänzenden Erklärung -- zu
+\hyperref[itm:04-1]{personenbezogener Daten} zu verlangen. Unter Berücksichtigung der Zwecke der Verarbeitung hat die betroffene Person das
+Recht, die Vervollständigung unvollständiger \hyperref[itm:04-1]{personenbezogener Daten} -- auch mittels einer ergänzenden Erklärung -- zu
 verlangen.
 
 \addsec{Eigene Notizen}
