--- a/artikel/21.tex
+++ b/artikel/21.tex
@@ -7,7 +7,7 @@
 \begin{enumerate}
 
   \item Die betroffene Person hat das Recht, aus Gründen, die sich aus ihrer besonderen Situation ergeben, jederzeit
-   gegen die Verarbeitung sie betreffender personenbezogener Daten, die aufgrund von \hyperref[itm:06-1]{Artikel 6
+   gegen die Verarbeitung sie betreffender \hyperref[itm:04-1]{personenbezogener Daten}, die aufgrund von \hyperref[itm:06-1]{Artikel 6
    Absatz 1} Buchstaben \hyperref[itm:06-1e]{e} oder \hyperref[itm:06-1f]{f} erfolgt, Widerspruch einzulegen; dies gilt
    auch für ein auf diese Bestimmungen gestütztes Profiling. Der Verantwortliche verarbeitet die personenbezogenen
    Daten nicht mehr, es sei denn, er kann zwingende schutzwürdige Gründe für die Verarbeitung nachweisen, die die
@@ -15,13 +15,13 @@
    Ausübung oder Verteidigung von Rechtsansprüchen.
   \label{itm:21-1}
 
-  \item Werden personenbezogene Daten verarbeitet, um Direktwerbung zu betreiben, so hat die betroffene Person das
-   Recht, jederzeit Widerspruch gegen die Verarbeitung sie betreffender personenbezogener Daten zum Zwecke derartiger
+  \item Werden \hyperref[itm:04-1]{personenbezogene Daten} verarbeitet, um Direktwerbung zu betreiben, so hat die betroffene Person das
+   Recht, jederzeit Widerspruch gegen die Verarbeitung sie betreffender \hyperref[itm:04-1]{personenbezogener Daten} zum Zwecke derartiger
    Werbung einzulegen; dies gilt auch für das Profiling, soweit es mit solcher Direktwerbung in Verbindung steht.
   \label{itm:21-2}
 
   \item Widerspricht die betroffene Person der Verarbeitung für Zwecke der Direktwerbung, so werden die
-   personenbezogenen Daten nicht mehr für diese Zwecke verarbeitet.
+   \hyperref[itm:04-1]{personenbezogenen Daten} nicht mehr für diese Zwecke verarbeitet.
   \label{itm:21-3}
 
   \item Die betroffene Person muss spätestens zum Zeitpunkt der ersten Kommunikation mit ihr ausdrücklich auf das in den
@@ -35,7 +35,7 @@
   \label{itm:21-5}
 
   \item Die betroffene Person hat das Recht, aus Gründen, die sich aus ihrer besonderen Situation ergeben, gegen die sie
-   betreffende Verarbeitung sie betreffender personenbezogener Daten, die zu wissenschaftlichen oder historischen
+   betreffende Verarbeitung sie betreffender \hyperref[itm:04-1]{personenbezogener Daten}, die zu wissenschaftlichen oder historischen
    Forschungszwecken oder zu statistischen Zwecken gemäß \hyperref[itm:89-1]{Artikel 89 Absatz 1} erfolgt, Widerspruch
    einzulegen, es sei denn, die Verarbeitung ist zur Erfüllung einer im öffentlichen Interesse liegenden Aufgabe
    erforderlich.
@@ -49,7 +49,7 @@
 
   \item Die in \hyperref[itm:21-5]{Absatz 5} referenzierte
    \href{https://eur-lex.europa.eu/legal-content/DE/TXT/HTML/?uri=CELEX:32002L0058&qid=1659212895940&from=DE}
-    {Richtlinie 2002/58/EG} regelt die Verarbeitung personenbezogener Daten und den Schutz der Privatsphäre in der
+    {Richtlinie 2002/58/EG} regelt die Verarbeitung \hyperref[itm:04-1]{personenbezogener Daten} und den Schutz der Privatsphäre in der
     elektronischen Kommunikation.
 
 \end{itemize}
