--- a/artikel/34.tex
+++ b/artikel/34.tex
@@ -6,13 +6,13 @@
 
 \begin{enumerate}
 
-  \item Hat die Verletzung des Schutzes personenbezogener Daten voraussichtlich ein hohes Risiko für die persönlichen
+  \item Hat die Verletzung des Schutzes \hyperref[itm:04-1]{personenbezogener Daten} voraussichtlich ein hohes Risiko für die persönlichen
    Rechte und Freiheiten natürlicher Personen zur Folge, so benachrichtigt der Verantwortliche die betroffene Person
    unverzüglich von der Verletzung.
   \label{itm:34-1}
 
   \item Die in \hyperref[itm:34-1]{Absatz 1} genannte Benachrichtigung der betroffenen Person beschreibt in klarer und
-   einfacher Sprache die Art der Verletzung des Schutzes personenbezogener Daten und enthält zumindest die in
+   einfacher Sprache die Art der Verletzung des Schutzes \hyperref[itm:04-1]{personenbezogener Daten} und enthält zumindest die in
    \hyperref[itm:33-3]{Artikel 33 Absatz 3} Buchstaben \hyperref[itm:33-3b]{b}, \hyperref[itm:33-3c]{c} und \hyperref
     [itm:33-3d]{d} genannten Informationen und Maßnahmen.
   \label{itm:34-2}
@@ -24,8 +24,8 @@
   \begin{enumerate}
   
     \item der Verantwortliche geeignete technische und organisatorische Sicherheitsvorkehrungen getroffen hat und diese
-     Vorkehrungen auf die von der Verletzung betroffenen personenbezogenen Daten angewandt wurden, insbesondere solche,
-     durch die die personenbezogenen Daten für alle Personen, die nicht zum Zugang zu den personenbezogenen Daten
+     Vorkehrungen auf die von der Verletzung betroffenen \hyperref[itm:04-1]{personenbezogenen Daten} angewandt wurden, insbesondere solche,
+     durch die die \hyperref[itm:04-1]{personenbezogenen Daten} für alle Personen, die nicht zum Zugang zu den \hyperref[itm:04-1]{personenbezogenen Daten}
      befugt sind, unzugänglich gemacht werden, etwa durch Verschlüsselung;
     \label{itm:34-3a}
 
@@ -43,7 +43,7 @@
 
   \item Wenn der Verantwortliche die betroffene Person nicht bereits über die Verletzung des Schutzes personenbezogener
    Daten benachrichtigt hat, kann die Aufsichtsbehörde unter Berücksichtigung der Wahrscheinlichkeit, mit der die
-   Verletzung des Schutzes personenbezogener Daten zu einem hohen Risiko führt, von dem Verantwortlichen verlangen,
+   Verletzung des Schutzes \hyperref[itm:04-1]{personenbezogener Daten} zu einem hohen Risiko führt, von dem Verantwortlichen verlangen,
    dies nachzuholen, oder sie kann mit einem Beschluss feststellen, dass bestimmte der in \hyperref[itm:34-3]{Absatz 3}
    genannten Voraussetzungen erfüllt sind.
   \label{itm:34-4}
