--- a/artikel/35.tex
+++ b/artikel/35.tex
@@ -9,7 +9,7 @@
   \item Hat eine Form der Verarbeitung, insbesondere bei Verwendung neuer Technologien, aufgrund der Art, des Umfangs,
    der Umstände und der Zwecke der Verarbeitung voraussichtlich ein hohes Risiko für die Rechte und Freiheiten
    natürlicher Personen zur Folge, so führt der Verantwortliche vorab eine Abschätzung der Folgen der vorgesehenen
-   Verarbeitungsvorgänge für den Schutz personenbezogener Daten durch. Für die Untersuchung mehrerer ähnlicher
+   Verarbeitungsvorgänge für den Schutz \hyperref[itm:04-1]{personenbezogener Daten} durch. Für die Untersuchung mehrerer ähnlicher
    Verarbeitungsvorgänge mit ähnlich hohen Risiken kann eine einzige Abschätzung vorgenommen werden.
   \label{itm:35-1}
 
@@ -28,8 +28,8 @@
      Rechtswirkung gegenüber natürlichen Personen entfalten oder diese in ähnlich erheblicher Weise beeinträchtigen;
     \label{itm:35-3a}
 
-    \item umfangreiche Verarbeitung besonderer Kategorien von personenbezogenen Daten gemäß \hyperref[itm:09-1]
-     {Artikel 9 Absatz 1} oder von personenbezogenen Daten über strafrechtliche Verurteilungen und Straftaten
+    \item umfangreiche Verarbeitung besonderer Kategorien von \hyperref[itm:04-1]{personenbezogenen Daten} gemäß \hyperref[itm:09-1]
+     {Artikel 9 Absatz 1} oder von \hyperref[itm:04-1]{personenbezogenen Daten} über strafrechtliche Verurteilungen und Straftaten
      gemäß \hyperref[ch:10]{Artikel 10} oder
     \label{itm:35-3b}
 
@@ -52,7 +52,7 @@
    zuständige Aufsichtsbehörde das Kohärenzverfahren gemäß \hyperref[ch:63]{Artikel 63} an, wenn solche Listen
    Verarbeitungstätigkeiten umfassen, die mit dem Angebot von Waren oder Dienstleistungen für betroffene Personen oder
    der Beobachtung des Verhaltens dieser Personen in mehreren Mitgliedstaaten im Zusammenhang stehen oder die den
-   freien Verkehr personenbezogener Daten innerhalb der Union erheblich beeinträchtigen könnten.
+   freien Verkehr \hyperref[itm:04-1]{personenbezogener Daten} innerhalb der Union erheblich beeinträchtigen könnten.
   \label{itm:35-6}
 
   \item Die Folgenabschätzung enthält zumindest Folgendes:
@@ -72,7 +72,7 @@
     \label{itm:35-7c}
 
     \item die zur Bewältigung der Risiken geplanten Abhilfemaßnahmen, einschließlich Garantien, Sicherheitsvorkehrungen
-     und Verfahren, durch die der Schutz personenbezogener Daten sichergestellt und der Nachweis dafür erbracht wird,
+     und Verfahren, durch die der Schutz \hyperref[itm:04-1]{personenbezogener Daten} sichergestellt und der Nachweis dafür erbracht wird,
      dass diese Verordnung eingehalten wird, wobei den Rechten und berechtigten Interessen der betroffenen Personen und
      sonstiger Betroffener Rechnung getragen wird.
     \label{itm:35-7d}
