--- a/artikel/40.tex
+++ b/artikel/40.tex
@@ -25,10 +25,10 @@
     \item die berechtigten Interessen des Verantwortlichen in bestimmten Zusammenhängen;
     \label{itm:40-2b}
 
-    \item Erhebung personenbezogener Daten;
+    \item Erhebung \hyperref[itm:04-1]{personenbezogener Daten};
     \label{itm:40-2c}
 
-    \item Pseudonymisierung personenbezogener Daten;
+    \item Pseudonymisierung \hyperref[itm:04-1]{personenbezogener Daten};
     \label{itm:40-2d}
 
     \item Unterrichtung der Öffentlichkeit und der betroffenen Personen;
@@ -45,11 +45,11 @@
      für die Sicherheit der Verarbeitung gemäß \hyperref[ch:32]{Artikel 32};
     \label{itm:40-2h}
 
-    \item die Meldung von Verletzungen des Schutzes personenbezogener Daten an Aufsichtsbehörden und die
-     Benachrichtigung der betroffenen Person von solchen Verletzungen des Schutzes personenbezogener Daten;
+    \item die Meldung von Verletzungen des Schutzes \hyperref[itm:04-1]{personenbezogener Daten} an Aufsichtsbehörden und die
+     Benachrichtigung der betroffenen Person von solchen Verletzungen des Schutzes \hyperref[itm:04-1]{personenbezogener Daten};
     \label{itm:40-2i}
 
-    \item die Übermittlung personenbezogener Daten an Drittländer oder an internationale Organisationen oder
+    \item die Übermittlung \hyperref[itm:04-1]{personenbezogener Daten} an Drittländer oder an internationale Organisationen oder
     \label{itm:40-2j}
 
     \item außergerichtliche Verfahren und sonstige Streitbeilegungsverfahren zur Beilegung von Streitigkeiten zwischen
@@ -63,7 +63,7 @@
    können Verhaltensregeln, die gemäß \hyperref[itm:40-5]{Absatz 5 des vorliegenden Artikels} genehmigt wurden und
    gemäß \hyperref[itm:40-9]{Absatz 9 des vorliegenden Artikels} allgemeine Gültigkeit besitzen, können auch von
    Verantwortlichen oder Auftragsverarbeitern, die gemäß \hyperref[ch:3]{Artikel 3} nicht unter diese Verordnung
-   fallen, eingehalten werden, um geeignete Garantien im Rahmen der Übermittlung personenbezogener Daten an Drittländer
+   fallen, eingehalten werden, um geeignete Garantien im Rahmen der Übermittlung \hyperref[itm:04-1]{personenbezogener Daten} an Drittländer
    oder internationale Organisationen nach Maßgabe des \hyperref[itm:46-2e]{Artikels 46 Absatz 2 Buchstabe e} zu
    bieten. Diese Verantwortlichen oder Auftragsverarbeiter gehen mittels vertraglicher oder sonstiger rechtlich
    bindender Instrumente die verbindliche und durchsetzbare Verpflichtung ein, die geeigneten Garantien anzuwenden,
