--- a/artikel/49.tex
+++ b/artikel/49.tex
@@ -8,7 +8,7 @@
 
   \item Falls weder ein Angemessenheitsbeschluss nach \hyperref[itm:45-3]{Artikel 45 Absatz 3} vorliegt noch geeignete
    Garantien nach \hyperref[ch:46]{Artikel 46}, einschließlich verbindlicher interner Datenschutzvorschriften,
-   bestehen, ist eine Übermittlung oder eine Reihe von Übermittlungen personenbezogener Daten an ein Drittland oder an
+   bestehen, ist eine Übermittlung oder eine Reihe von Übermittlungen \hyperref[itm:04-1]{personenbezogener Daten} an ein Drittland oder an
    eine internationale Organisation nur unter einer der folgenden Bedingungen zulässig:
   \label{itm:49-1-1}
 
@@ -54,14 +54,14 @@
   nur eine begrenzte Zahl von betroffenen Personen betrifft, für die Wahrung der zwingenden berechtigten Interessen des
   Verantwortlichen erforderlich ist, sofern die Interessen oder die Rechte und Freiheiten der betroffenen Person nicht
   überwiegen, und der Verantwortliche alle Umstände der Datenübermittlung beurteilt und auf der Grundlage dieser
-  Beurteilung geeignete Garantien in Bezug auf den Schutz personenbezogener Daten vorgesehen hat. Der Verantwortliche
+  Beurteilung geeignete Garantien in Bezug auf den Schutz \hyperref[itm:04-1]{personenbezogener Daten} vorgesehen hat. Der Verantwortliche
   setzt die Aufsichtsbehörde von der Übermittlung in Kenntnis. Der Verantwortliche unterrichtet die betroffene Person
   über die Übermittlung und seine zwingenden berechtigten Interessen; dies erfolgt zusätzlich zu den der betroffenen
   Person nach den Artikeln \hyperref[ch:13]{13} und \hyperref[ch:14]{14} mitgeteilten Informationen.
   \label{itm:49-1-2}
 
   \item Datenübermittlungen gemäß \hyperref[itm:49-1-1g]{Absatz 1 Unterabsatz 1 Buchstabe g} dürfen nicht die Gesamtheit
-   oder ganze Kategorien der im Register enthaltenen personenbezogenen Daten umfassen. Wenn das Register der
+   oder ganze Kategorien der im Register enthaltenen \hyperref[itm:04-1]{personenbezogenen Daten} umfassen. Wenn das Register der
    Einsichtnahme durch Personen mit berechtigtem Interesse dient, darf die Übermittlung nur auf Anfrage dieser Personen
    oder nur dann erfolgen, wenn diese Personen die Adressaten der Übermittlung sind.
   \label{itm:49-2}
@@ -77,7 +77,7 @@
 
   \item Liegt kein Angemessenheitsbeschluss vor, so können im Unionsrecht oder im Recht der Mitgliedstaaten aus
    wichtigen Gründen des öffentlichen Interesses ausdrücklich Beschränkungen der Übermittlung bestimmter Kategorien von
-   personenbezogenen Daten an Drittländer oder internationale Organisationen vorgesehen werden. Die Mitgliedstaaten
+   \hyperref[itm:04-1]{personenbezogenen Daten} an Drittländer oder internationale Organisationen vorgesehen werden. Die Mitgliedstaaten
    teilen der Kommission derartige Bestimmungen mit.
   \label{itm:49-5}
 
