--- a/artikel/53.tex
+++ b/artikel/53.tex
@@ -18,7 +18,7 @@
   \end{itemize}
 
   \item Jedes Mitglied muss über die für die Erfüllung seiner Aufgaben und Ausübung seiner Befugnisse erforderliche
-   Qualifikation, Erfahrung und Sachkunde insbesondere im Bereich des Schutzes personenbezogener Daten verfügen.
+   Qualifikation, Erfahrung und Sachkunde insbesondere im Bereich des Schutzes \hyperref[itm:04-1]{personenbezogener Daten} verfügen.
   \label{itm:53-2}
 
   \item Das Amt eines Mitglieds endet mit Ablauf der Amtszeit, mit seinem Rücktritt oder verpflichtender Versetzung in
