--- a/artikel/58.tex
+++ b/artikel/58.tex
@@ -26,7 +26,7 @@
      hinzuweisen,
     \label{itm:58-1d}
 
-    \item von dem Verantwortlichen und dem Auftragsverarbeiter Zugang zu allen personenbezogenen Daten und
+    \item von dem Verantwortlichen und dem Auftragsverarbeiter Zugang zu allen \hyperref[itm:04-1]{personenbezogenen Daten} und
      Informationen, die zur Erfüllung ihrer Aufgaben notwendig sind, zu erhalten,
     \label{itm:58-1e}
 
@@ -58,7 +58,7 @@
      bestimmte Weise und innerhalb eines bestimmten Zeitraums in Einklang mit dieser Verordnung zu bringen,
     \label{itm:58-2d}
 
-    \item den Verantwortlichen anzuweisen, die von einer Verletzung des Schutzes personenbezogener Daten betroffenen
+    \item den Verantwortlichen anzuweisen, die von einer Verletzung des Schutzes \hyperref[itm:04-1]{personenbezogener Daten} betroffenen
      Person entsprechend zu benachrichtigen,
     \label{itm:58-2e}
 
@@ -66,9 +66,9 @@
      verhängen,
     \label{itm:58-2f}
 
-    \item die Berichtigung oder Löschung von personenbezogenen Daten oder die Einschränkung der Verarbeitung gemäß den
+    \item die Berichtigung oder Löschung von \hyperref[itm:04-1]{personenbezogenen Daten} oder die Einschränkung der Verarbeitung gemäß den
      Artikeln \hyperref[ch:16]{16}, \hyperref[ch:17]{17} und \hyperref[ch:17]{18} und die Unterrichtung der Empfänger,
-     an die diese personenbezogenen Daten gemäß \hyperref[itm:17-2]{Artikel 17 Absatz 2} und \hyperref[ch:19]
+     an die diese \hyperref[itm:04-1]{personenbezogenen Daten} gemäß \hyperref[itm:17-2]{Artikel 17 Absatz 2} und \hyperref[ch:19]
      {Artikel 19} offengelegt wurden, über solche Maßnahmen anzuordnen,
     \label{itm:58-2g}
 
@@ -98,7 +98,7 @@
      beraten,
     \label{itm:58-3a}
 
-    \item zu allen Fragen, die im Zusammenhang mit dem Schutz personenbezogener Daten stehen, von sich aus oder auf
+    \item zu allen Fragen, die im Zusammenhang mit dem Schutz \hyperref[itm:04-1]{personenbezogener Daten} stehen, von sich aus oder auf
      Anfrage Stellungnahmen an das nationale Parlament, die Regierung des Mitgliedstaats oder im Einklang mit dem Recht
      des Mitgliedstaats an sonstige Einrichtungen und Stellen sowie an die Öffentlichkeit zu richten,
     \label{itm:58-3b}
