--- a/artikel/79.tex
+++ b/artikel/79.tex
@@ -10,7 +10,7 @@
    Rechtsbehelfs einschließlich des Rechts auf Beschwerde bei einer Aufsichtsbehörde gemäß \hyperref[ch:77]{Artikel 77}
    das Recht auf einen wirksamen gerichtlichen Rechtsbehelf, wenn sie der Ansicht ist, dass die ihr aufgrund dieser
    Verordnung zustehenden Rechte infolge einer nicht im Einklang mit dieser Verordnung stehenden Verarbeitung ihrer
-   personenbezogenen Daten verletzt wurden.
+   \hyperref[itm:04-1]{personenbezogenen Daten} verletzt wurden.
   \label{itm:79-1}
 
   \item Für Klagen gegen einen Verantwortlichen oder gegen einen Auftragsverarbeiter sind die Gerichte des
