--- a/artikel/85.tex
+++ b/artikel/85.tex
@@ -6,7 +6,7 @@
 
 \begin{enumerate}
 
-  \item Die Mitgliedstaaten bringen durch Rechtsvorschriften das Recht auf den Schutz personenbezogener Daten gemäß
+  \item Die Mitgliedstaaten bringen durch Rechtsvorschriften das Recht auf den Schutz \hyperref[itm:04-1]{personenbezogener Daten} gemäß
    dieser Verordnung mit dem Recht auf freie Meinungsäußerung und Informationsfreiheit, einschließlich der Verarbeitung
    zu journalistischen Zwecken und zu wissenschaftlichen, künstlerischen oder literarischen Zwecken, in Einklang.
   \label{itm:85-1}
@@ -18,7 +18,7 @@
    Daten an Drittländer oder an internationale Organisationen), \hyperref[part:6]{Kapitel VI}
    (Unabhängige Aufsichtsbehörden), \hyperref[part:7]{Kapitel VII}(Zusammenarbeit und Kohärenz) und \hyperref[part:9]
    {Kapitel IX} (Vorschriften für besondere Verarbeitungssituationen) vor, wenn dies erforderlich ist, um das Recht auf
-   Schutz der personenbezogenen Daten mit der Freiheit der Meinungsäußerung und der Informationsfreiheit in Einklang zu
+   Schutz der \hyperref[itm:04-1]{personenbezogenen Daten} mit der Freiheit der Meinungsäußerung und der Informationsfreiheit in Einklang zu
    bringen.
   \label{itm:85-2}
 
