--- a/artikel/88.tex
+++ b/artikel/88.tex
@@ -8,7 +8,7 @@
 
   \item Die Mitgliedstaaten können durch Rechtsvorschriften oder durch Kollektivvereinbarungen spezifischere
    Vorschriften zur Gewährleistung des Schutzes der Rechte und Freiheiten hinsichtlich der Verarbeitung
-   personenbezogener Beschäftigtendaten im Beschäftigungskontext, insbesondere für Zwecke der Einstellung, der
+   \hyperref[itm:04-1]{personenbezogener Beschäftigtendaten} im Beschäftigungskontext, insbesondere für Zwecke der Einstellung, der
    Erfüllung des Arbeitsvertrags einschließlich der Erfüllung von durch Rechtsvorschriften oder durch
    Kollektivvereinbarungen festgelegten Pflichten, des Managements, der Planung und der Organisation der Arbeit, der
    Gleichheit und Diversität am Arbeitsplatz, der Gesundheit und Sicherheit am Arbeitsplatz, des Schutzes des Eigentums
@@ -19,7 +19,7 @@
 
   \item Diese Vorschriften umfassen angemessene und besondere Maßnahmen zur Wahrung der menschlichen Würde, der
    berechtigten Interessen und der Grundrechte der betroffenen Person, insbesondere im Hinblick auf die Transparenz der
-   Verarbeitung, die Übermittlung personenbezogener Daten innerhalb einer Unternehmensgruppe oder einer Gruppe von
+   Verarbeitung, die Übermittlung \hyperref[itm:04-1]{personenbezogener Daten} innerhalb einer Unternehmensgruppe oder einer Gruppe von
    Unternehmen, die eine gemeinsame Wirtschaftstätigkeit ausüben, und die Überwachungssysteme am Arbeitsplatz.
   \label{itm:88-2}
 
