--- a/artikel/90.tex
+++ b/artikel/90.tex
@@ -12,7 +12,7 @@
    nationalen Stellen erlassenen Verpflichtung dem Berufsgeheimnis oder einer gleichwertigen Geheimhaltungspflicht
    unterliegen, regeln, soweit dies notwendig und verhältnismäßig ist, um das Recht auf Schutz der personenbezogenen
    Daten mit der Pflicht zur Geheimhaltung in Einklang zu bringen. Diese Vorschriften gelten nur in Bezug auf
-   personenbezogene Daten, die der Verantwortliche oder der Auftragsverarbeiter bei einer Tätigkeit erlangt oder
+   \hyperref[itm:04-1]{personenbezogene Daten}, die der Verantwortliche oder der Auftragsverarbeiter bei einer Tätigkeit erlangt oder
    erhoben hat, die einer solchen Geheimhaltungspflicht unterliegt.
   \label{itm:90-1}
 
