--- a/artikel/94.tex
+++ b/artikel/94.tex
@@ -11,7 +11,7 @@
 
   \item Verweise auf die aufgehobene Richtlinie gelten als Verweise auf die vorliegende Verordnung. Verweise auf die
    durch Artikel 29 der Richtlinie 95/46/EG eingesetzte Gruppe für den Schutz von Personen bei der Verarbeitung
-   personenbezogener Daten gelten als Verweise auf den kraft dieser Verordnung errichteten Europäischen
+   \hyperref[itm:04-1]{personenbezogener Daten} gelten als Verweise auf den kraft dieser Verordnung errichteten Europäischen
    Datenschutzausschuss.
   \label{itm:94-2}
 
