--- a/artikel/98.tex
+++ b/artikel/98.tex
@@ -5,7 +5,7 @@
 \addsec{Text der Verordnung}
 
 Die Kommission legt gegebenenfalls Gesetzgebungsvorschläge zur Änderung anderer Rechtsakte der Union zum Schutz
-personenbezogener Daten vor, damit ein einheitlicher und kohärenter Schutz natürlicher Personen bei der Verarbeitung
+\hyperref[itm:04-1]{personenbezogener Daten} vor, damit ein einheitlicher und kohärenter Schutz natürlicher Personen bei der Verarbeitung
 sichergestellt wird. Dies betrifft insbesondere die Vorschriften zum Schutz natürlicher Personen bei der Verarbeitung
 solcher Daten durch die Organe, Einrichtungen, Ämter und Agenturen der Union und zum freien Verkehr solcher Daten.
 
